Update po files Thanks to @teamblue-e2

--- a/po/ar.po
+++ b/po/ar.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 07:44+0200\n"
+"POT-Creation-Date: 2023-10-27 11:11+0200\n"
 "PO-Revision-Date: 2018-12-17 02:51+0200\n"
 "Last-Translator: Hazem <moustafagamal@hotmail.com>\n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -3014,10 +3014,6 @@ msgstr ""
 msgid "Configure which tuner will be preferred, when more than one tuner is available. If set to 'auto' the system will give priority to the tuner having the lowest number of channels/satellites."
 msgstr ""
 
-#, fuzzy
-msgid "Configure your NTP server."
-msgstr "تكوين اسم الخادم"
-
 msgid "Configure your internal LAN"
 msgstr "تكوين شبكتك الداخليه"
 
@@ -3727,6 +3723,12 @@ msgid "Descramble receiving http streams"
 msgstr ""
 
 msgid "Descramble sending http streams"
+msgstr ""
+
+msgid "Descramble service via streamrelay port"
+msgstr ""
+
+msgid "Descramble service via streamrelay url"
 msgstr ""
 
 #
@@ -5910,6 +5912,11 @@ msgstr ""
 msgid "HDMI-IN Actions"
 msgstr ""
 
+#
+#, fuzzy
+msgid "HDMI-IN Recording settings"
+msgstr "تسجيل"
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "غير مدعم"
@@ -6097,9 +6104,6 @@ msgstr ""
 #, fuzzy
 msgid "Hotplug"
 msgstr "تحميل بلج إنز"
-
-msgid "Hour"
-msgstr ""
 
 msgid "Hourly"
 msgstr ""
@@ -6600,6 +6604,9 @@ msgid "Internal flash"
 msgstr "الفلاش الداخلى"
 
 msgid "Internal hdd only"
+msgstr ""
+
+msgid "Internet (ntp)"
 msgstr ""
 
 msgid "Interval between keys when repeating:"
@@ -7426,10 +7433,6 @@ msgstr "وضعيه"
 msgid "Mode %s (%04o)"
 msgstr "%s (%s) \n"
 
-#, fuzzy
-msgid "Mode for autorestore"
-msgstr "إستعادة البرنامج التشغيلى"
-
 #
 #, fuzzy
 msgid "Model"
@@ -7840,12 +7843,8 @@ msgstr "الان"
 msgid "NOW"
 msgstr "الان"
 
-msgid "NTP"
+msgid "NTP Hostname"
 msgstr ""
-
-#, fuzzy
-msgid "NTP server"
-msgstr "اسم الخادم"
 
 #
 msgid "NTSC"
@@ -8401,9 +8400,6 @@ msgstr ""
 msgid "On valid ONIDs, ignore frequency sub network part"
 msgstr ""
 
-msgid "Once per day"
-msgstr ""
-
 #
 msgid "One"
 msgstr "واحد"
@@ -8918,6 +8914,12 @@ msgstr ""
 #
 msgid "Play recorded movies..."
 msgstr "عرض الافلام المسجله"
+
+msgid "Play service with streamrelay"
+msgstr ""
+
+msgid "Play service without streamrelay"
+msgstr ""
 
 #, fuzzy
 msgid "Play title"
@@ -11042,6 +11044,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select how your box will upgrade."
 msgstr ""
 
@@ -11549,9 +11554,6 @@ msgstr ""
 #, fuzzy
 msgid "Setup mode"
 msgstr "أسلوب الضبط"
-
-msgid "Setup network time synchronization interval."
-msgstr ""
 
 msgid "Setup your positioner"
 msgstr ""
@@ -13017,16 +13019,7 @@ msgstr ""
 msgid "Symlink to "
 msgstr ""
 
-msgid "Sync NTP every (minutes)"
-msgstr ""
-
 msgid "Sync failure moving back to origin !"
-msgstr ""
-
-msgid "Sync time using"
-msgstr ""
-
-msgid "Synchronize systemtime using transponder or internet."
 msgstr ""
 
 msgid "Syrian Arab Republic"
@@ -13197,6 +13190,9 @@ msgstr ""
 msgid "The EPG data will be stored every (hours)"
 msgstr ""
 
+msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
+
 msgid "The Image Viewer component of the File Commander requires the PicturePlayer extension. Install PicturePlayer to enable this operation."
 msgstr ""
 
@@ -13285,6 +13281,9 @@ msgstr ""
 msgid "The height of the picture. The input will be scaled to match this value."
 msgstr ""
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 #, fuzzy
 msgid ""
 "The network wizard extension is not installed!\n"
@@ -13325,6 +13324,9 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "المسار %s موجود سلفا"
+
+msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
 
 #, python-format
 msgid "The results have been written to %s"
@@ -13746,6 +13748,9 @@ msgstr ""
 msgid "Time scale"
 msgstr "إختيار المؤقت"
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time to execute command or script"
 msgstr ""
 
@@ -13981,6 +13986,11 @@ msgstr "وضع النقل"
 msgid "Transponder"
 msgstr "التردد"
 
+#
+#, fuzzy
+msgid "Transponder Time"
+msgstr "التردد"
+
 msgid "Transport Stream Type"
 msgstr ""
 
@@ -14059,12 +14069,6 @@ msgid "Tuners & scanning"
 msgstr "الموالف"
 
 msgid "Tunisia"
-msgstr ""
-
-msgid ""
-"Turbo: One reboot after flash\n"
-"Fast: One reboot after flash, one reboot after restore\n"
-"Slow: One reboot after flash, one reboot after restore in GUI"
 msgstr ""
 
 #, fuzzy
@@ -16182,9 +16186,6 @@ msgstr ""
 msgid "fashion"
 msgstr ""
 
-msgid "fast"
-msgstr ""
-
 #
 msgid "fileformats (BMP, PNG, JPG, GIF)"
 msgstr ""
@@ -16430,9 +16431,6 @@ msgid "menu"
 msgstr "قائمه"
 
 msgid "mins"
-msgstr "دقائق"
-
-msgid "minutes"
 msgstr "دقائق"
 
 #, fuzzy
@@ -16897,9 +16895,6 @@ msgstr ""
 msgid "slot%s - %s mode 12 (current image)"
 msgstr "تنشيط التكوين الحالى"
 
-msgid "slow"
-msgstr ""
-
 msgid "soap/melodrama/folkloric"
 msgstr ""
 
@@ -17006,9 +17001,6 @@ msgid "tourism/travel"
 msgstr ""
 
 msgid "true"
-msgstr ""
-
-msgid "turbo"
 msgstr ""
 
 #
