--- a/po/ca.po
+++ b/po/ca.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 07:44+0200\n"
+"POT-Creation-Date: 2023-10-27 11:11+0200\n"
 "PO-Revision-Date: 2007-08-14 10:23+0200\n"
 "Last-Translator: Oriol Pellicer <oriol@elsud.org>\n"
 "Language-Team: \n"
@@ -3057,9 +3057,6 @@ msgstr ""
 msgid "Configure which tuner will be preferred, when more than one tuner is available. If set to 'auto' the system will give priority to the tuner having the lowest number of channels/satellites."
 msgstr ""
 
-msgid "Configure your NTP server."
-msgstr ""
-
 #
 msgid "Configure your internal LAN"
 msgstr ""
@@ -3826,6 +3823,12 @@ msgid "Descramble receiving http streams"
 msgstr ""
 
 msgid "Descramble sending http streams"
+msgstr ""
+
+msgid "Descramble service via streamrelay port"
+msgstr ""
+
+msgid "Descramble service via streamrelay url"
 msgstr ""
 
 #
@@ -6125,6 +6128,11 @@ msgstr ""
 msgid "HDMI-IN Actions"
 msgstr ""
 
+#
+#, fuzzy
+msgid "HDMI-IN Recording settings"
+msgstr "Gravant"
+
 msgid "HDR10 support"
 msgstr ""
 
@@ -6324,9 +6332,6 @@ msgstr ""
 #, fuzzy
 msgid "Hotplug"
 msgstr "Descarregar plugins"
-
-msgid "Hour"
-msgstr ""
 
 msgid "Hourly"
 msgstr ""
@@ -6849,6 +6854,9 @@ msgid "Internal flash"
 msgstr "Flash interna"
 
 msgid "Internal hdd only"
+msgstr ""
+
+msgid "Internet (ntp)"
 msgstr ""
 
 msgid "Interval between keys when repeating:"
@@ -7671,9 +7679,6 @@ msgstr "Mode"
 msgid "Mode %s (%04o)"
 msgstr "%s (%s)\n"
 
-msgid "Mode for autorestore"
-msgstr ""
-
 #
 #, fuzzy
 msgid "Model"
@@ -8099,13 +8104,8 @@ msgstr "ARA"
 msgid "NOW"
 msgstr "ARA"
 
-msgid "NTP"
+msgid "NTP Hostname"
 msgstr ""
-
-#
-#, fuzzy
-msgid "NTP server"
-msgstr "Servidor de noms"
 
 #
 msgid "NTSC"
@@ -8685,9 +8685,6 @@ msgstr ""
 msgid "On valid ONIDs, ignore frequency sub network part"
 msgstr ""
 
-msgid "Once per day"
-msgstr ""
-
 #
 msgid "One"
 msgstr "Un"
@@ -9222,6 +9219,12 @@ msgstr ""
 #
 msgid "Play recorded movies..."
 msgstr "Reproduir pel·lícules gravades..."
+
+msgid "Play service with streamrelay"
+msgstr ""
+
+msgid "Play service without streamrelay"
+msgstr ""
 
 #
 #, fuzzy
@@ -11528,6 +11531,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select how your box will upgrade."
 msgstr ""
 
@@ -12050,9 +12056,6 @@ msgstr ""
 #, fuzzy
 msgid "Setup mode"
 msgstr "Mode test"
-
-msgid "Setup network time synchronization interval."
-msgstr ""
 
 msgid "Setup your positioner"
 msgstr ""
@@ -13556,16 +13559,7 @@ msgstr ""
 msgid "Symlink to "
 msgstr ""
 
-msgid "Sync NTP every (minutes)"
-msgstr ""
-
 msgid "Sync failure moving back to origin !"
-msgstr ""
-
-msgid "Sync time using"
-msgstr ""
-
-msgid "Synchronize systemtime using transponder or internet."
 msgstr ""
 
 msgid "Syrian Arab Republic"
@@ -13733,6 +13727,9 @@ msgstr ""
 msgid "The EPG data will be stored every (hours)"
 msgstr ""
 
+msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
+
 msgid "The Image Viewer component of the File Commander requires the PicturePlayer extension. Install PicturePlayer to enable this operation."
 msgstr ""
 
@@ -13813,6 +13810,9 @@ msgstr ""
 msgid "The height of the picture. The input will be scaled to match this value."
 msgstr ""
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -13850,6 +13850,9 @@ msgstr ""
 #
 #, python-format
 msgid "The path %s already exists."
+msgstr ""
+
+msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
 msgstr ""
 
 #, python-format
@@ -14258,6 +14261,9 @@ msgstr ""
 msgid "Time scale"
 msgstr "Selecció de gravació"
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time to execute command or script"
 msgstr ""
 
@@ -14499,6 +14505,11 @@ msgstr "Mode transmissió"
 msgid "Transponder"
 msgstr "Transponedor"
 
+#
+#, fuzzy
+msgid "Transponder Time"
+msgstr "Transponedor"
+
 msgid "Transport Stream Type"
 msgstr ""
 
@@ -14586,12 +14597,6 @@ msgid "Tuners & scanning"
 msgstr "Sintonitzador"
 
 msgid "Tunisia"
-msgstr ""
-
-msgid ""
-"Turbo: One reboot after flash\n"
-"Fast: One reboot after flash, one reboot after restore\n"
-"Slow: One reboot after flash, one reboot after restore in GUI"
 msgstr ""
 
 #
@@ -16772,9 +16777,6 @@ msgstr ""
 msgid "fashion"
 msgstr ""
 
-msgid "fast"
-msgstr ""
-
 #
 msgid "fileformats (BMP, PNG, JPG, GIF)"
 msgstr ""
@@ -17038,10 +17040,6 @@ msgstr "menú"
 
 #
 msgid "mins"
-msgstr "minuts"
-
-#
-msgid "minutes"
 msgstr "minuts"
 
 #
@@ -17542,9 +17540,6 @@ msgstr ""
 msgid "slot%s - %s mode 12 (current image)"
 msgstr "Configuració del sintonitzador"
 
-msgid "slow"
-msgstr ""
-
 msgid "soap/melodrama/folkloric"
 msgstr ""
 
@@ -17664,9 +17659,6 @@ msgid "tourism/travel"
 msgstr ""
 
 msgid "true"
-msgstr ""
-
-msgid "turbo"
 msgstr ""
 
 #
