--- a/po/cs.po
+++ b/po/cs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 07:44+0200\n"
+"POT-Creation-Date: 2023-10-27 11:11+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -3168,11 +3168,6 @@ msgid "Configure which tuner will be preferred, when more than one tuner is avai
 msgstr "Nastavuje, který tuner bude preferovaný, jestliže je k dispozici více než jeden tuner. V případě nastavení na 'automaticky' bude preferován tuner s nejnižším počtem kanálů/satelitů."
 
 #
-#, fuzzy
-msgid "Configure your NTP server."
-msgstr "Nastavuje DNS servery"
-
-#
 msgid "Configure your internal LAN"
 msgstr "Nastavte vnitřní LAN"
 
@@ -3951,6 +3946,16 @@ msgstr "Dekódovat http streamy"
 #
 #, fuzzy
 msgid "Descramble sending http streams"
+msgstr "Dekódovat http streamy"
+
+#
+#, fuzzy
+msgid "Descramble service via streamrelay port"
+msgstr "Dekódovat http streamy"
+
+#
+#, fuzzy
+msgid "Descramble service via streamrelay url"
 msgstr "Dekódovat http streamy"
 
 #
@@ -6338,6 +6343,11 @@ msgstr "Nastavení HDMI-CEC"
 msgid "HDMI-IN Actions"
 msgstr ""
 
+#
+#, fuzzy
+msgid "HDMI-IN Recording settings"
+msgstr "záznam"
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "nepodporováno"
@@ -6535,9 +6545,6 @@ msgstr ""
 #, fuzzy
 msgid "Hotplug"
 msgstr "Stáhnout pluginy"
-
-msgid "Hour"
-msgstr ""
 
 msgid "Hourly"
 msgstr ""
@@ -7083,6 +7090,9 @@ msgstr "Vnitřní flash"
 #
 msgid "Internal hdd only"
 msgstr "pouze interní disk"
+
+msgid "Internet (ntp)"
+msgstr ""
 
 #
 msgid "Interval between keys when repeating:"
@@ -7926,11 +7936,6 @@ msgstr "%s (%s)\n"
 
 #
 #, fuzzy
-msgid "Mode for autorestore"
-msgstr "Obnovit software"
-
-#
-#, fuzzy
 msgid "Model"
 msgstr "Mód"
 
@@ -8368,13 +8373,8 @@ msgstr "NYNÍ"
 msgid "NOW"
 msgstr "NYNÍ"
 
-msgid "NTP"
+msgid "NTP Hostname"
 msgstr ""
-
-#
-#, fuzzy
-msgid "NTP server"
-msgstr "DNS server"
 
 #
 msgid "NTSC"
@@ -8974,9 +8974,6 @@ msgstr "Po skončení filmu (jako menu)"
 msgid "On valid ONIDs, ignore frequency sub network part"
 msgstr ""
 
-msgid "Once per day"
-msgstr ""
-
 #
 msgid "One"
 msgstr "Jeden"
@@ -9520,6 +9517,12 @@ msgstr "přehrát předchozí"
 #
 msgid "Play recorded movies..."
 msgstr "Přehrát nahrané pořady..."
+
+msgid "Play service with streamrelay"
+msgstr ""
+
+msgid "Play service without streamrelay"
+msgstr ""
 
 #
 #, fuzzy
@@ -11877,6 +11880,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select how your box will upgrade."
 msgstr ""
 
@@ -12415,9 +12421,6 @@ msgstr "Nastavení"
 #
 msgid "Setup mode"
 msgstr "Nastavovací mód"
-
-msgid "Setup network time synchronization interval."
-msgstr ""
 
 msgid "Setup your positioner"
 msgstr "Nastavení pozicioneru"
@@ -13893,17 +13896,8 @@ msgstr ""
 msgid "Symlink to "
 msgstr ""
 
-msgid "Sync NTP every (minutes)"
-msgstr ""
-
 msgid "Sync failure moving back to origin !"
 msgstr "Selhání synchronizace přesouvá zpět na původní !"
-
-msgid "Sync time using"
-msgstr ""
-
-msgid "Synchronize systemtime using transponder or internet."
-msgstr ""
 
 msgid "Syrian Arab Republic"
 msgstr ""
@@ -14078,6 +14072,9 @@ msgstr ""
 msgid "The EPG data will be stored every (hours)"
 msgstr ""
 
+msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
+
 msgid "The Image Viewer component of the File Commander requires the PicturePlayer extension. Install PicturePlayer to enable this operation."
 msgstr ""
 
@@ -14172,6 +14169,9 @@ msgstr ""
 msgid "The height of the picture. The input will be scaled to match this value."
 msgstr ""
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 #
 msgid ""
 "The network wizard extension is not installed!\n"
@@ -14212,6 +14212,9 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "Cesta %s již existuje."
+
+msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
 
 #, fuzzy, python-format
 msgid "The results have been written to %s"
@@ -14657,6 +14660,9 @@ msgstr ""
 msgid "Time scale"
 msgstr "Měřítko času"
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time to execute command or script"
 msgstr ""
 
@@ -14897,6 +14903,11 @@ msgstr "Přenosový mód"
 msgid "Transponder"
 msgstr "Transponder"
 
+#
+#, fuzzy
+msgid "Transponder Time"
+msgstr "Transponder"
+
 msgid "Transport Stream Type"
 msgstr ""
 
@@ -14978,12 +14989,6 @@ msgid "Tuners & scanning"
 msgstr "Tuner"
 
 msgid "Tunisia"
-msgstr ""
-
-msgid ""
-"Turbo: One reboot after flash\n"
-"Fast: One reboot after flash, one reboot after restore\n"
-"Slow: One reboot after flash, one reboot after restore in GUI"
 msgstr ""
 
 #
@@ -17291,9 +17296,6 @@ msgstr "ne"
 msgid "fashion"
 msgstr "móda"
 
-msgid "fast"
-msgstr ""
-
 #
 msgid "fileformats (BMP, PNG, JPG, GIF)"
 msgstr "Formáty souborů (BMP, PNG, JPG, GIF)"
@@ -17565,10 +17567,6 @@ msgstr "menu"
 
 #
 msgid "mins"
-msgstr "minut"
-
-#
-msgid "minutes"
 msgstr "minut"
 
 #
@@ -18083,9 +18081,6 @@ msgstr ""
 msgid "slot%s - %s mode 12 (current image)"
 msgstr "Aktivovat současnou konfiguraci"
 
-msgid "slow"
-msgstr ""
-
 #, fuzzy
 msgid "soap/melodrama/folkloric"
 msgstr "soap/melodrama/folklórní"
@@ -18214,9 +18209,6 @@ msgstr "turistika/cestování"
 #
 msgid "true"
 msgstr "ano"
-
-msgid "turbo"
-msgstr ""
 
 #, fuzzy
 msgid "type"
