--- a/po/enigma2.pot
+++ b/po/enigma2.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 07:44+0200\n"
+"POT-Creation-Date: 2023-10-27 11:11+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -3034,7 +3034,7 @@ msgstr[1] ""
 
 #, python-format
 msgid ""
-"Download Successsful\n"
+"Download Successful\n"
 "%s"
 msgstr ""
 
@@ -4393,9 +4393,6 @@ msgstr ""
 msgid "Hotplug"
 msgstr ""
 
-msgid "Hour"
-msgstr ""
-
 msgid "Hourly"
 msgstr ""
 
@@ -4739,6 +4736,9 @@ msgid "Internal flash"
 msgstr ""
 
 msgid "Internal hdd only"
+msgstr ""
+
+msgid "Internet (ntp)"
 msgstr ""
 
 msgid "Interval between keys when repeating:"
@@ -5346,9 +5346,6 @@ msgstr ""
 msgid "Mode %s (%04o)"
 msgstr ""
 
-msgid "Mode for autorestore"
-msgstr ""
-
 msgid "Model"
 msgstr ""
 
@@ -5651,9 +5648,6 @@ msgid "NIM & Type"
 msgstr ""
 
 msgid "NO"
-msgstr ""
-
-msgid "NTP"
 msgstr ""
 
 msgid "NTSC"
@@ -6075,9 +6069,6 @@ msgstr ""
 msgid "On end of movie (as menu)"
 msgstr ""
 
-msgid "Once per day"
-msgstr ""
-
 msgid "One"
 msgstr ""
 
@@ -6471,6 +6462,12 @@ msgid "Play previous"
 msgstr ""
 
 msgid "Play recorded movies..."
+msgstr ""
+
+msgid "Play service with streamrelay"
+msgstr ""
+
+msgid "Play service without streamrelay"
 msgstr ""
 
 msgid "Play title"
@@ -10072,6 +10069,9 @@ msgstr ""
 msgid "Transponder"
 msgstr ""
 
+msgid "Transponder Time"
+msgstr ""
+
 msgid "Transport Stream Type"
 msgstr ""
 
@@ -10130,12 +10130,6 @@ msgid "Tuner type"
 msgstr ""
 
 msgid "Tunisia"
-msgstr ""
-
-msgid ""
-"Turbo: One reboot after flash\n"
-"Fast: One reboot after flash, one reboot after restore\n"
-"Slow: One reboot after flash, one reboot after restore in GUI"
 msgstr ""
 
 msgid "Turkey"
@@ -11636,9 +11630,6 @@ msgstr ""
 msgid "fashion"
 msgstr ""
 
-msgid "fast"
-msgstr ""
-
 msgid "fileformats (BMP, PNG, JPG, GIF)"
 msgstr ""
 
@@ -11855,9 +11846,6 @@ msgid "menu"
 msgstr ""
 
 msgid "mins"
-msgstr ""
-
-msgid "minutes"
 msgstr ""
 
 msgid "module disabled"
@@ -12262,9 +12250,6 @@ msgstr ""
 msgid "slot%s - %s mode 12 (current image)"
 msgstr ""
 
-msgid "slow"
-msgstr ""
-
 msgid "soap/melodrama/folkloric"
 msgstr ""
 
@@ -12363,9 +12348,6 @@ msgid "tourism/travel"
 msgstr ""
 
 msgid "true"
-msgstr ""
-
-msgid "turbo"
 msgstr ""
 
 msgid "type"
@@ -12657,6 +12639,9 @@ msgid "Flash image"
 msgstr ""
 
 msgid "Frontpanel"
+msgstr ""
+
+msgid "HDMI-IN Recording settings"
 msgstr ""
 
 msgid "HotKey"
@@ -13115,9 +13100,6 @@ msgstr ""
 msgid "Configure which tuner will be preferred, when more than one tuner is available. If set to 'auto' the system will give priority to the tuner having the lowest number of channels/satellites."
 msgstr ""
 
-msgid "Configure your NTP server."
-msgstr ""
-
 msgid "Consider CI assignment"
 msgstr ""
 
@@ -13176,6 +13158,12 @@ msgid "Descramble receiving http streams"
 msgstr ""
 
 msgid "Descramble sending http streams"
+msgstr ""
+
+msgid "Descramble service via streamrelay port"
+msgstr ""
+
+msgid "Descramble service via streamrelay url"
 msgstr ""
 
 msgid "DiSEqC"
@@ -13445,7 +13433,7 @@ msgstr ""
 msgid "Multi-EPG bouquet selection"
 msgstr ""
 
-msgid "NTP server"
+msgid "NTP Hostname"
 msgstr ""
 
 msgid "Never decrypt the content while recording. This overrides the individual timer settings globally. If enabled, recordings are stored in crypted presentation and must be decrypted afterwards (sometimes called offline decoding). Default: off."
@@ -13604,6 +13592,9 @@ msgstr ""
 msgid "Select char for replacing newlines in epg."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select in which resolution pictures are displayed with picture viewer or movie player."
 msgstr ""
 
@@ -13629,9 +13620,6 @@ msgid "Setup delay mode to zap to channels."
 msgstr ""
 
 msgid "Setup mode"
-msgstr ""
-
-msgid "Setup network time synchronization interval."
 msgstr ""
 
 msgid "Setup your timezone."
@@ -13811,15 +13799,6 @@ msgstr ""
 msgid "Switch on the display during operation"
 msgstr ""
 
-msgid "Sync NTP every (minutes)"
-msgstr ""
-
-msgid "Sync time using"
-msgstr ""
-
-msgid "Synchronize systemtime using transponder or internet."
-msgstr ""
-
 msgid "Teletext subtitle color"
 msgstr ""
 
@@ -13827,6 +13806,9 @@ msgid "Test mode"
 msgstr ""
 
 msgid "The EPG data will be stored every (hours)"
+msgstr ""
+
+msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
 msgstr ""
 
 msgid "The aspect ratio of the recording."
@@ -13839,6 +13821,12 @@ msgid "The frame rate of the recording. Ideally, this will match the frame rate 
 msgstr ""
 
 msgid "The height of the picture. The input will be scaled to match this value."
+msgstr ""
+
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
+msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
 msgstr ""
 
 msgid "The stored EPG data will be read every (hours)"
@@ -13866,6 +13854,9 @@ msgid "This option allows you to show menu and/or plugin number quick links."
 msgstr ""
 
 msgid "This option allows you to show the full screen path leading to the current screen."
+msgstr ""
+
+msgid "Time synchronization method"
 msgstr ""
 
 msgid "Time zone settings"
