--- a/po/is.po
+++ b/po/is.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 07:44+0200\n"
+"POT-Creation-Date: 2023-10-27 11:11+0200\n"
 "PO-Revision-Date: 2011-05-07 12:23+0200\n"
 "Last-Translator: Baldur <bsveinsson@gmail.com>\n"
 "Language-Team: Polar Team/LT Team <baddi@oreind.is>\n"
@@ -2996,10 +2996,6 @@ msgstr ""
 msgid "Configure which tuner will be preferred, when more than one tuner is available. If set to 'auto' the system will give priority to the tuner having the lowest number of channels/satellites."
 msgstr ""
 
-#, fuzzy
-msgid "Configure your NTP server."
-msgstr "Stilla nafnaþjón"
-
 msgid "Configure your internal LAN"
 msgstr "Stilla innbyggt netkort"
 
@@ -3746,6 +3742,12 @@ msgid "Descramble receiving http streams"
 msgstr ""
 
 msgid "Descramble sending http streams"
+msgstr ""
+
+msgid "Descramble service via streamrelay port"
+msgstr ""
+
+msgid "Descramble service via streamrelay url"
 msgstr ""
 
 #
@@ -6050,6 +6052,11 @@ msgstr ""
 msgid "HDMI-IN Actions"
 msgstr ""
 
+#
+#, fuzzy
+msgid "HDMI-IN Recording settings"
+msgstr "Upptaka"
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "ekki stutt"
@@ -6253,9 +6260,6 @@ msgstr ""
 #, fuzzy
 msgid "Hotplug"
 msgstr "Hala niður íforritum"
-
-msgid "Hour"
-msgstr ""
 
 msgid "Hourly"
 msgstr ""
@@ -6787,6 +6791,9 @@ msgid "Internal flash"
 msgstr "Innra Flash minni"
 
 msgid "Internal hdd only"
+msgstr ""
+
+msgid "Internet (ntp)"
 msgstr ""
 
 msgid "Interval between keys when repeating:"
@@ -7641,11 +7648,6 @@ msgstr "%s (%s)\n"
 
 #
 #, fuzzy
-msgid "Mode for autorestore"
-msgstr "Hugbúnaðar endurinnsetning"
-
-#
-#, fuzzy
 msgid "Model"
 msgstr "Hamur"
 
@@ -8075,13 +8077,8 @@ msgstr "NÚNA"
 msgid "NOW"
 msgstr "NÚNA"
 
-msgid "NTP"
+msgid "NTP Hostname"
 msgstr ""
-
-#
-#, fuzzy
-msgid "NTP server"
-msgstr "Nafnaþjónn"
 
 #
 msgid "NTSC"
@@ -8675,9 +8672,6 @@ msgstr ""
 msgid "On valid ONIDs, ignore frequency sub network part"
 msgstr ""
 
-msgid "Once per day"
-msgstr ""
-
 #
 msgid "One"
 msgstr "Einn"
@@ -9219,6 +9213,12 @@ msgstr ""
 
 msgid "Play recorded movies..."
 msgstr "Spila uppteknar bíómyndir..."
+
+msgid "Play service with streamrelay"
+msgstr ""
+
+msgid "Play service without streamrelay"
+msgstr ""
 
 #, fuzzy
 msgid "Play title"
@@ -11546,6 +11546,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select how your box will upgrade."
 msgstr ""
 
@@ -12085,9 +12088,6 @@ msgstr ""
 #, fuzzy
 msgid "Setup mode"
 msgstr "Uppsetninga hamur"
-
-msgid "Setup network time synchronization interval."
-msgstr ""
 
 msgid "Setup your positioner"
 msgstr ""
@@ -13623,16 +13623,7 @@ msgstr ""
 msgid "Symlink to "
 msgstr ""
 
-msgid "Sync NTP every (minutes)"
-msgstr ""
-
 msgid "Sync failure moving back to origin !"
-msgstr ""
-
-msgid "Sync time using"
-msgstr ""
-
-msgid "Synchronize systemtime using transponder or internet."
 msgstr ""
 
 msgid "Syrian Arab Republic"
@@ -13821,6 +13812,9 @@ msgstr ""
 msgid "The EPG data will be stored every (hours)"
 msgstr ""
 
+msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
+
 msgid "The Image Viewer component of the File Commander requires the PicturePlayer extension. Install PicturePlayer to enable this operation."
 msgstr ""
 
@@ -13914,6 +13908,9 @@ msgstr ""
 msgid "The height of the picture. The input will be scaled to match this value."
 msgstr ""
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 #, fuzzy
 msgid ""
 "The network wizard extension is not installed!\n"
@@ -13955,6 +13952,9 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "Slóðin %s er þegar til."
+
+msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
 
 #
 #, fuzzy, python-format
@@ -14396,6 +14396,9 @@ msgstr ""
 msgid "Time scale"
 msgstr "Tímastillinga val"
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time to execute command or script"
 msgstr ""
 
@@ -14635,6 +14638,11 @@ msgstr "Sendi stilling"
 msgid "Transponder"
 msgstr "Sendir"
 
+#
+#, fuzzy
+msgid "Transponder Time"
+msgstr "Sendir"
+
 msgid "Transport Stream Type"
 msgstr ""
 
@@ -14720,12 +14728,6 @@ msgid "Tuners & scanning"
 msgstr "Móttakari"
 
 msgid "Tunisia"
-msgstr ""
-
-msgid ""
-"Turbo: One reboot after flash\n"
-"Fast: One reboot after flash, one reboot after restore\n"
-"Slow: One reboot after flash, one reboot after restore in GUI"
 msgstr ""
 
 #
@@ -16965,9 +16967,6 @@ msgstr ""
 msgid "fashion"
 msgstr ""
 
-msgid "fast"
-msgstr ""
-
 #
 msgid "fileformats (BMP, PNG, JPG, GIF)"
 msgstr "skráarform (BMP, PNG, JPG, GIF)"
@@ -17233,10 +17232,6 @@ msgstr "valmynd"
 #
 msgid "mins"
 msgstr "mín"
-
-#
-msgid "minutes"
-msgstr "mínútur"
 
 #
 #, fuzzy
@@ -17741,9 +17736,6 @@ msgstr ""
 msgid "slot%s - %s mode 12 (current image)"
 msgstr "virkja núverandi stillingar"
 
-msgid "slow"
-msgstr ""
-
 msgid "soap/melodrama/folkloric"
 msgstr ""
 
@@ -17859,9 +17851,6 @@ msgid "tourism/travel"
 msgstr ""
 
 msgid "true"
-msgstr ""
-
-msgid "turbo"
 msgstr ""
 
 #
