--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 07:44+0200\n"
+"POT-Creation-Date: 2023-10-27 11:11+0200\n"
 "PO-Revision-Date: 2021-11-30 12:39+0100\n"
 "Last-Translator: teamblue-e2 <teamblue-e2@online.de>\n"
 "Language-Team: www.linsat.net <spaeleus@croci.org>\n"
@@ -3017,10 +3017,6 @@ msgid "Configure which tuner will be preferred, when more than one tuner is avai
 msgstr "Opzione per impostare il tuner preferenziale, da utilizzarsi quando più di un tuner risultasse disponibile. L'opzione \"Auto\" assegnerà la priorità al tuner sul quale risulta configurato il minor numero di canali/satelliti."
 
 #
-msgid "Configure your NTP server."
-msgstr "Configura il tuo server NTP."
-
-#
 msgid "Configure your internal LAN"
 msgstr "Configurare la LAN interna"
 
@@ -3740,6 +3736,14 @@ msgstr "Decifra la ricezione di flussi http"
 
 msgid "Descramble sending http streams"
 msgstr "Decifra l'invio di flussi http"
+
+#, fuzzy
+msgid "Descramble service via streamrelay port"
+msgstr "Decifra la ricezione di flussi http"
+
+#, fuzzy
+msgid "Descramble service via streamrelay url"
+msgstr "Decifra la ricezione di flussi http"
 
 #
 msgid "Description"
@@ -5924,6 +5928,11 @@ msgstr "Configurazione HDMI-CEC"
 msgid "HDMI-IN Actions"
 msgstr "Azioni HDMI-IN"
 
+#
+#, fuzzy
+msgid "HDMI-IN Recording settings"
+msgstr "Registrazione HDMI"
+
 msgid "HDR10 support"
 msgstr "Supporto HDR10"
 
@@ -6107,9 +6116,6 @@ msgstr "Hotkey zap"
 #
 msgid "Hotplug"
 msgstr "Hotplug"
-
-msgid "Hour"
-msgstr "Ora"
 
 #, fuzzy
 msgid "Hourly"
@@ -6606,6 +6612,9 @@ msgstr "Flash interna"
 
 msgid "Internal hdd only"
 msgstr "Solo HDD interno"
+
+msgid "Internet (ntp)"
+msgstr ""
 
 msgid "Interval between keys when repeating:"
 msgstr "Intervallo tra i tasti durante la ripetizione:"
@@ -7398,10 +7407,6 @@ msgid "Mode %s (%04o)"
 msgstr "Modo %s (%04o)"
 
 #
-msgid "Mode for autorestore"
-msgstr "Modalità per l'autorestore"
-
-#
 msgid "Model"
 msgstr "Modello"
 
@@ -7791,12 +7796,9 @@ msgstr "NO"
 msgid "NOW"
 msgstr "ORA"
 
-msgid "NTP"
-msgstr "NTP"
-
-#
-msgid "NTP server"
-msgstr ""
+#, fuzzy
+msgid "NTP Hostname"
+msgstr "Hostname:"
 
 #
 msgid "NTSC"
@@ -8357,9 +8359,6 @@ msgstr ""
 msgid "On valid ONIDs, ignore frequency sub network part"
 msgstr ""
 
-msgid "Once per day"
-msgstr "Una volta al giorno"
-
 #
 msgid "One"
 msgstr "Uno"
@@ -8844,6 +8843,12 @@ msgstr "Riprodurre la precedente"
 #
 msgid "Play recorded movies..."
 msgstr "Riprodurre registrazioni..."
+
+msgid "Play service with streamrelay"
+msgstr ""
+
+msgid "Play service without streamrelay"
+msgstr ""
 
 #
 msgid "Play title"
@@ -10988,6 +10993,9 @@ msgstr "Seleziona la velocità con cui la parabola deve spostarsi tra i satellit
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select how your box will upgrade."
 msgstr "Seleziona come il tuo box si aggiornerà."
 
@@ -11478,9 +11486,6 @@ msgstr "Menu impostazioni"
 #
 msgid "Setup mode"
 msgstr "Livello di accesso impostazioni"
-
-msgid "Setup network time synchronization interval."
-msgstr ""
 
 msgid "Setup your positioner"
 msgstr "Configurare il posizionatore"
@@ -12849,17 +12854,8 @@ msgstr "Collegamento simbolico"
 msgid "Symlink to "
 msgstr "Collegamento simbolico a"
 
-msgid "Sync NTP every (minutes)"
-msgstr ""
-
 msgid "Sync failure moving back to origin !"
 msgstr "Sincronizzazione fallita tornando all'origine"
-
-msgid "Sync time using"
-msgstr ""
-
-msgid "Synchronize systemtime using transponder or internet."
-msgstr "Sincronizza l'ora di sistema tramite transponder o Internet."
 
 msgid "Syrian Arab Republic"
 msgstr "Siria"
@@ -13033,6 +13029,9 @@ msgstr ""
 msgid "The EPG data will be stored every (hours)"
 msgstr "I dati EPG verranno memorizzati ogni (ore)"
 
+msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
+
 msgid "The Image Viewer component of the File Commander requires the PicturePlayer extension. Install PicturePlayer to enable this operation."
 msgstr "Il componente Visualizzatore immagini di File Commander richiede l'estensione PicturePlayer. Installa PicturePlayer per abilitare questa operazione."
 
@@ -13124,6 +13123,9 @@ msgstr "L'hash di una directory non può essere calcolato."
 msgid "The height of the picture. The input will be scaled to match this value."
 msgstr "L'altezza dell'immagine. L'input verrà ridimensionato in modo da corrispondere a questo valore."
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 #
 msgid ""
 "The network wizard extension is not installed!\n"
@@ -13182,6 +13184,9 @@ msgstr "La password non può essere vuota."
 #, python-format
 msgid "The path %s already exists."
 msgstr "Percorso %s già esistente."
+
+msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
 
 #
 #, python-format
@@ -13626,6 +13631,9 @@ msgstr "Tempo richiesto per questo processo: %s"
 msgid "Time scale"
 msgstr "Scala tempo"
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time to execute command or script"
 msgstr ""
 
@@ -13850,6 +13858,11 @@ msgstr "Modalità trasmissione"
 msgid "Transponder"
 msgstr "Transponder"
 
+#
+#, fuzzy
+msgid "Transponder Time"
+msgstr "Transponder"
+
 msgid "Transport Stream Type"
 msgstr ""
 
@@ -13928,15 +13941,6 @@ msgstr "Tuner"
 
 msgid "Tunisia"
 msgstr "Tunisia"
-
-msgid ""
-"Turbo: One reboot after flash\n"
-"Fast: One reboot after flash, one reboot after restore\n"
-"Slow: One reboot after flash, one reboot after restore in GUI"
-msgstr ""
-"Turbo: Un riavvio dopo il flash\n"
-"Veloce: Un riavvio dopo il flash, un riavvio dopo il ripristino\n"
-"Lento: Un riavvio dopo il flash, un riavvio dopo il ripristino in GUI"
 
 #
 msgid "Turkey"
@@ -16164,9 +16168,6 @@ msgstr "Falso"
 msgid "fashion"
 msgstr "Moda"
 
-msgid "fast"
-msgstr "veloce"
-
 #
 msgid "fileformats (BMP, PNG, JPG, GIF)"
 msgstr "Formati file (BMP, PNG, JPG, GIF)"
@@ -16423,10 +16424,6 @@ msgstr "Menu"
 #
 msgid "mins"
 msgstr "Min"
-
-#
-msgid "minutes"
-msgstr "Minuti"
 
 #
 #, fuzzy
@@ -16912,9 +16909,6 @@ msgstr "slot%s - %s"
 msgid "slot%s - %s mode 12 (current image)"
 msgstr "slot%s - %s (immagine corrente)"
 
-msgid "slow"
-msgstr "lento"
-
 #, fuzzy
 msgid "soap/melodrama/folkloric"
 msgstr "Soap/Melodrammi/Folclore"
@@ -17033,9 +17027,6 @@ msgstr "Viaggi/Turismo"
 
 msgid "true"
 msgstr "Vero"
-
-msgid "turbo"
-msgstr "turbo"
 
 msgid "type"
 msgstr "tipo"
