--- a/po/ku.po
+++ b/po/ku.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 07:44+0200\n"
+"POT-Creation-Date: 2023-10-27 11:11+0200\n"
 "PO-Revision-Date: 2013-04-22 04:29+0330\n"
 "Last-Translator: dimili21\n"
 "Language-Team: \n"
@@ -2819,10 +2819,6 @@ msgstr "Configure which tuner type will be preferred, when the same service is a
 msgid "Configure which tuner will be preferred, when more than one tuner is available. If set to 'auto' the system will give priority to the tuner having the lowest number of channels/satellites."
 msgstr "Configure which tuner will be preferred, when more than one tuner is available. If set to 'auto' the system will give priority to the tuner having the lowest number of channels/satellites."
 
-#, fuzzy
-msgid "Configure your NTP server."
-msgstr "Configure nameservers"
-
 msgid "Configure your internal LAN"
 msgstr "Configure your internal LAN"
 
@@ -3505,6 +3501,14 @@ msgstr "Descramble http streams"
 
 #, fuzzy
 msgid "Descramble sending http streams"
+msgstr "Descramble http streams"
+
+#, fuzzy
+msgid "Descramble service via streamrelay port"
+msgstr "Descramble http streams"
+
+#, fuzzy
+msgid "Descramble service via streamrelay url"
 msgstr "Descramble http streams"
 
 msgid "Description"
@@ -5566,6 +5570,10 @@ msgid "HDMI-IN Actions"
 msgstr ""
 
 #, fuzzy
+msgid "HDMI-IN Recording settings"
+msgstr "Recording"
+
+#, fuzzy
 msgid "HDR10 support"
 msgstr "not supported"
 
@@ -5747,9 +5755,6 @@ msgstr ""
 #, fuzzy
 msgid "Hotplug"
 msgstr "Dayni Girédayi"
-
-msgid "Hour"
-msgstr ""
 
 msgid "Hourly"
 msgstr ""
@@ -6226,6 +6231,9 @@ msgstr "Internal flash"
 
 msgid "Internal hdd only"
 msgstr "Internal hdd only"
+
+msgid "Internet (ntp)"
+msgstr ""
 
 msgid "Interval between keys when repeating:"
 msgstr "Interval between keys when repeating:"
@@ -6957,10 +6965,6 @@ msgid "Mode %s (%04o)"
 msgstr "%s (%s)\n"
 
 #, fuzzy
-msgid "Mode for autorestore"
-msgstr "Software restore"
-
-#, fuzzy
 msgid "Model"
 msgstr "Mode"
 
@@ -7343,12 +7347,8 @@ msgstr "NOW"
 msgid "NOW"
 msgstr "NOW"
 
-msgid "NTP"
+msgid "NTP Hostname"
 msgstr ""
-
-#, fuzzy
-msgid "NTP server"
-msgstr "Nameserver"
 
 msgid "NTSC"
 msgstr "NTSC"
@@ -7869,9 +7869,6 @@ msgstr ""
 msgid "On valid ONIDs, ignore frequency sub network part"
 msgstr ""
 
-msgid "Once per day"
-msgstr ""
-
 msgid "One"
 msgstr "One"
 
@@ -8356,6 +8353,12 @@ msgstr "Play previous"
 
 msgid "Play recorded movies..."
 msgstr "Play recorded movies..."
+
+msgid "Play service with streamrelay"
+msgstr ""
+
+msgid "Play service without streamrelay"
+msgstr ""
 
 #, fuzzy
 msgid "Play title"
@@ -10362,6 +10365,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select how your box will upgrade."
 msgstr ""
 
@@ -10831,9 +10837,6 @@ msgstr "Setup menu"
 
 msgid "Setup mode"
 msgstr "Setup mode"
-
-msgid "Setup network time synchronization interval."
-msgstr ""
 
 msgid "Setup your positioner"
 msgstr "Setup your positioner"
@@ -12148,17 +12151,8 @@ msgstr ""
 msgid "Symlink to "
 msgstr ""
 
-msgid "Sync NTP every (minutes)"
-msgstr ""
-
 msgid "Sync failure moving back to origin !"
 msgstr "Sync failure moving back to origin !"
-
-msgid "Sync time using"
-msgstr ""
-
-msgid "Synchronize systemtime using transponder or internet."
-msgstr ""
 
 msgid "Syrian Arab Republic"
 msgstr ""
@@ -12320,6 +12314,9 @@ msgstr ""
 msgid "The EPG data will be stored every (hours)"
 msgstr ""
 
+msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
+
 msgid "The Image Viewer component of the File Commander requires the PicturePlayer extension. Install PicturePlayer to enable this operation."
 msgstr ""
 
@@ -12409,6 +12406,9 @@ msgstr ""
 msgid "The height of the picture. The input will be scaled to match this value."
 msgstr ""
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -12448,6 +12448,9 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "The path %s already exists."
+
+msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
 
 #, fuzzy, python-format
 msgid "The results have been written to %s"
@@ -12860,6 +12863,9 @@ msgstr ""
 msgid "Time scale"
 msgstr "Time scale"
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time to execute command or script"
 msgstr ""
 
@@ -13062,6 +13068,10 @@ msgstr "Transmission mode"
 msgid "Transponder"
 msgstr "Transponder"
 
+#, fuzzy
+msgid "Transponder Time"
+msgstr "Transponder"
+
 msgid "Transport Stream Type"
 msgstr ""
 
@@ -13132,12 +13142,6 @@ msgid "Tuners & scanning"
 msgstr "Tuner"
 
 msgid "Tunisia"
-msgstr ""
-
-msgid ""
-"Turbo: One reboot after flash\n"
-"Fast: One reboot after flash, one reboot after restore\n"
-"Slow: One reboot after flash, one reboot after restore in GUI"
 msgstr ""
 
 #, fuzzy
@@ -15218,9 +15222,6 @@ msgstr "false"
 msgid "fashion"
 msgstr "fashion"
 
-msgid "fast"
-msgstr ""
-
 msgid "fileformats (BMP, PNG, JPG, GIF)"
 msgstr "fileformats (BMP, PNG, JPG, GIF)"
 
@@ -15450,9 +15451,6 @@ msgstr "menu"
 
 msgid "mins"
 msgstr "mins"
-
-msgid "minutes"
-msgstr "minutes"
 
 #, fuzzy
 msgid "module disabled"
@@ -15893,9 +15891,6 @@ msgstr ""
 msgid "slot%s - %s mode 12 (current image)"
 msgstr "Ti dixwazi aktif biki"
 
-msgid "slow"
-msgstr ""
-
 #, fuzzy
 msgid "soap/melodrama/folkloric"
 msgstr "soap/melodram/folkloric"
@@ -16005,9 +16000,6 @@ msgstr "tourism/travel"
 
 msgid "true"
 msgstr "true"
-
-msgid "turbo"
-msgstr ""
 
 #, fuzzy
 msgid "type"
