--- a/po/lt.po
+++ b/po/lt.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 07:44+0200\n"
+"POT-Creation-Date: 2023-10-27 11:11+0200\n"
 "PO-Revision-Date: 2020-02-29 08:52+0200\n"
 "Last-Translator: Audronis Grincevicius <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
@@ -2834,10 +2834,6 @@ msgstr ""
 msgid "Configure which tuner will be preferred, when more than one tuner is available. If set to 'auto' the system will give priority to the tuner having the lowest number of channels/satellites."
 msgstr ""
 
-#, fuzzy
-msgid "Configure your NTP server."
-msgstr "Konfigūruokite serverių pavadinimus"
-
 msgid "Configure your internal LAN"
 msgstr "Konfigūruokite savo vidinį tinklą"
 
@@ -3530,6 +3526,12 @@ msgid "Descramble receiving http streams"
 msgstr ""
 
 msgid "Descramble sending http streams"
+msgstr ""
+
+msgid "Descramble service via streamrelay port"
+msgstr ""
+
+msgid "Descramble service via streamrelay url"
 msgstr ""
 
 msgid "Description"
@@ -5618,6 +5620,10 @@ msgid "HDMI-IN Actions"
 msgstr ""
 
 #, fuzzy
+msgid "HDMI-IN Recording settings"
+msgstr "Įrašymas"
+
+#, fuzzy
 msgid "HDR10 support"
 msgstr "nepalaikomas"
 
@@ -5800,9 +5806,6 @@ msgstr ""
 #, fuzzy
 msgid "Hotplug"
 msgstr "Parsisiųsti papildomas programas"
-
-msgid "Hour"
-msgstr ""
 
 msgid "Hourly"
 msgstr ""
@@ -6285,6 +6288,9 @@ msgid "Internal flash"
 msgstr "Vidinė atmintinė"
 
 msgid "Internal hdd only"
+msgstr ""
+
+msgid "Internet (ntp)"
 msgstr ""
 
 msgid "Interval between keys when repeating:"
@@ -7043,10 +7049,6 @@ msgid "Mode %s (%04o)"
 msgstr "%s (%s)\n"
 
 #, fuzzy
-msgid "Mode for autorestore"
-msgstr "Programinės įrangos atkūrimas"
-
-#, fuzzy
 msgid "Model"
 msgstr "Pasirinkimas"
 
@@ -7428,12 +7430,8 @@ msgstr "DABAR"
 msgid "NOW"
 msgstr "DABAR"
 
-msgid "NTP"
+msgid "NTP Hostname"
 msgstr ""
-
-#, fuzzy
-msgid "NTP server"
-msgstr "Serverio pavadinimas"
 
 msgid "NTSC"
 msgstr "NTSC"
@@ -7957,9 +7955,6 @@ msgstr ""
 msgid "On valid ONIDs, ignore frequency sub network part"
 msgstr ""
 
-msgid "Once per day"
-msgstr ""
-
 msgid "One"
 msgstr "Vienas"
 
@@ -8448,6 +8443,12 @@ msgstr ""
 
 msgid "Play recorded movies..."
 msgstr "Leisti įrašytus filmus..."
+
+msgid "Play service with streamrelay"
+msgstr ""
+
+msgid "Play service without streamrelay"
+msgstr ""
 
 #, fuzzy
 msgid "Play title"
@@ -10472,6 +10473,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select how your box will upgrade."
 msgstr ""
 
@@ -10952,9 +10956,6 @@ msgstr ""
 #, fuzzy
 msgid "Setup mode"
 msgstr "Valdymo būdas"
-
-msgid "Setup network time synchronization interval."
-msgstr ""
 
 msgid "Setup your positioner"
 msgstr ""
@@ -12307,16 +12308,7 @@ msgstr ""
 msgid "Symlink to "
 msgstr ""
 
-msgid "Sync NTP every (minutes)"
-msgstr ""
-
 msgid "Sync failure moving back to origin !"
-msgstr ""
-
-msgid "Sync time using"
-msgstr ""
-
-msgid "Synchronize systemtime using transponder or internet."
 msgstr ""
 
 msgid "Syrian Arab Republic"
@@ -12480,6 +12472,9 @@ msgstr ""
 msgid "The EPG data will be stored every (hours)"
 msgstr ""
 
+msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
+
 msgid "The Image Viewer component of the File Commander requires the PicturePlayer extension. Install PicturePlayer to enable this operation."
 msgstr ""
 
@@ -12567,6 +12562,9 @@ msgstr ""
 msgid "The height of the picture. The input will be scaled to match this value."
 msgstr ""
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 #, fuzzy
 msgid ""
 "The network wizard extension is not installed!\n"
@@ -12607,6 +12605,9 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "Kelias %s jau egzistuoja."
+
+msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
 
 #, fuzzy, python-format
 msgid "The results have been written to %s"
@@ -13022,6 +13023,9 @@ msgstr ""
 msgid "Time scale"
 msgstr "Laikmačio pasirinkimas"
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time to execute command or script"
 msgstr ""
 
@@ -13228,6 +13232,10 @@ msgstr "Perdavimo būdas"
 msgid "Transponder"
 msgstr "Transponderis"
 
+#, fuzzy
+msgid "Transponder Time"
+msgstr "Transponderis"
+
 msgid "Transport Stream Type"
 msgstr ""
 
@@ -13300,12 +13308,6 @@ msgid "Tuners & scanning"
 msgstr "Imtuvas"
 
 msgid "Tunisia"
-msgstr ""
-
-msgid ""
-"Turbo: One reboot after flash\n"
-"Fast: One reboot after flash, one reboot after restore\n"
-"Slow: One reboot after flash, one reboot after restore in GUI"
 msgstr ""
 
 #, fuzzy
@@ -15352,9 +15354,6 @@ msgstr ""
 msgid "fashion"
 msgstr ""
 
-msgid "fast"
-msgstr ""
-
 msgid "fileformats (BMP, PNG, JPG, GIF)"
 msgstr "failų formatai (BMP, PNG, JPG, GIF)"
 
@@ -15584,9 +15583,6 @@ msgstr "meniu"
 
 msgid "mins"
 msgstr "min (ių)"
-
-msgid "minutes"
-msgstr "minučių"
 
 #, fuzzy
 msgid "module disabled"
@@ -16023,9 +16019,6 @@ msgstr ""
 msgid "slot%s - %s mode 12 (current image)"
 msgstr "aktyvuokite dabartinę konfigūraciją"
 
-msgid "slow"
-msgstr ""
-
 msgid "soap/melodrama/folkloric"
 msgstr ""
 
@@ -16130,9 +16123,6 @@ msgid "tourism/travel"
 msgstr ""
 
 msgid "true"
-msgstr ""
-
-msgid "turbo"
 msgstr ""
 
 #, fuzzy
