--- a/po/lv.po
+++ b/po/lv.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 07:44+0200\n"
+"POT-Creation-Date: 2023-10-27 11:11+0200\n"
 "PO-Revision-Date: 2014-11-12 00:49+0200\n"
 "Last-Translator: Taapat <taapat@gmail.com>\n"
 "Language-Team: Taapat <taapat@gmail.com>\n"
@@ -2837,10 +2837,6 @@ msgstr "Uzstāda kādam uztvērēja tipam dot priekšroku, ja viens un tas pats 
 msgid "Configure which tuner will be preferred, when more than one tuner is available. If set to 'auto' the system will give priority to the tuner having the lowest number of channels/satellites."
 msgstr "Uzstāda kuram uztvērējam dot priekšroku ja pieejams vairāk kā viens uztvērējs. Ja norādīsiet 'auto', sistēma izvēlēsies uztvērēju ar mazāko kanāla/pavadoņa numuru."
 
-#, fuzzy
-msgid "Configure your NTP server."
-msgstr "Uzstādīt DNS"
-
 msgid "Configure your internal LAN"
 msgstr "Uzstādīt jūsu tīklu (LAN)"
 
@@ -3524,6 +3520,14 @@ msgstr "Dekodēt http plūsmas"
 
 #, fuzzy
 msgid "Descramble sending http streams"
+msgstr "Dekodēt http plūsmas"
+
+#, fuzzy
+msgid "Descramble service via streamrelay port"
+msgstr "Dekodēt http plūsmas"
+
+#, fuzzy
+msgid "Descramble service via streamrelay url"
 msgstr "Dekodēt http plūsmas"
 
 msgid "Description"
@@ -5601,6 +5605,10 @@ msgid "HDMI-IN Actions"
 msgstr ""
 
 #, fuzzy
+msgid "HDMI-IN Recording settings"
+msgstr "Ieraksta"
+
+#, fuzzy
 msgid "HDR10 support"
 msgstr "nav atbalstīts"
 
@@ -5783,9 +5791,6 @@ msgstr ""
 #, fuzzy
 msgid "Hotplug"
 msgstr "Lejuplādēt spraudņus"
-
-msgid "Hour"
-msgstr ""
 
 msgid "Hourly"
 msgstr ""
@@ -6262,6 +6267,9 @@ msgstr "Iekšējā atmiņa"
 
 msgid "Internal hdd only"
 msgstr "Tikai iekšējais hdd"
+
+msgid "Internet (ntp)"
+msgstr ""
 
 msgid "Interval between keys when repeating:"
 msgstr "Intervāls starp taustiņiem, kad atkārtojas:"
@@ -6993,10 +7001,6 @@ msgid "Mode %s (%04o)"
 msgstr "%s (%s)\n"
 
 #, fuzzy
-msgid "Mode for autorestore"
-msgstr "Programmatūras atjaunošana"
-
-#, fuzzy
 msgid "Model"
 msgstr "Režīms"
 
@@ -7380,12 +7384,8 @@ msgstr "PAŠREIZ"
 msgid "NOW"
 msgstr "PAŠREIZ"
 
-msgid "NTP"
+msgid "NTP Hostname"
 msgstr ""
-
-#, fuzzy
-msgid "NTP server"
-msgstr "Domēna vārdu serveris"
 
 msgid "NTSC"
 msgstr "NTSC"
@@ -7907,9 +7907,6 @@ msgstr ""
 msgid "On valid ONIDs, ignore frequency sub network part"
 msgstr ""
 
-msgid "Once per day"
-msgstr ""
-
 msgid "One"
 msgstr "Viens"
 
@@ -8393,6 +8390,12 @@ msgstr "Atskaņot iepriekšējo"
 
 msgid "Play recorded movies..."
 msgstr "Atskaņot ierakstītās filmas..."
+
+msgid "Play service with streamrelay"
+msgstr ""
+
+msgid "Play service without streamrelay"
+msgstr ""
 
 #, fuzzy
 msgid "Play title"
@@ -10405,6 +10408,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select how your box will upgrade."
 msgstr ""
 
@@ -10875,9 +10881,6 @@ msgstr "Iestatījumu izvēlne"
 
 msgid "Setup mode"
 msgstr "Iestatījumu režīms"
-
-msgid "Setup network time synchronization interval."
-msgstr ""
 
 msgid "Setup your positioner"
 msgstr "Pozicioniera iestatījumi"
@@ -12195,17 +12198,8 @@ msgstr ""
 msgid "Symlink to "
 msgstr ""
 
-msgid "Sync NTP every (minutes)"
-msgstr ""
-
 msgid "Sync failure moving back to origin !"
 msgstr "Sinhronizēšana pārtraukta, atiestata uz oriģinālu!"
-
-msgid "Sync time using"
-msgstr ""
-
-msgid "Synchronize systemtime using transponder or internet."
-msgstr ""
 
 msgid "Syrian Arab Republic"
 msgstr ""
@@ -12368,6 +12362,9 @@ msgstr ""
 msgid "The EPG data will be stored every (hours)"
 msgstr ""
 
+msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
+
 msgid "The Image Viewer component of the File Commander requires the PicturePlayer extension. Install PicturePlayer to enable this operation."
 msgstr ""
 
@@ -12457,6 +12454,9 @@ msgstr ""
 msgid "The height of the picture. The input will be scaled to match this value."
 msgstr ""
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -12496,6 +12496,9 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "Ceļš %s jau eksistē."
+
+msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
 
 #, fuzzy, python-format
 msgid "The results have been written to %s"
@@ -12908,6 +12911,9 @@ msgstr ""
 msgid "Time scale"
 msgstr "Laika skala"
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time to execute command or script"
 msgstr ""
 
@@ -13110,6 +13116,10 @@ msgstr "Pārraides režīms"
 msgid "Transponder"
 msgstr "Transponderis"
 
+#, fuzzy
+msgid "Transponder Time"
+msgstr "Transponderis"
+
 msgid "Transport Stream Type"
 msgstr ""
 
@@ -13180,12 +13190,6 @@ msgid "Tuners & scanning"
 msgstr "Uztvērējs"
 
 msgid "Tunisia"
-msgstr ""
-
-msgid ""
-"Turbo: One reboot after flash\n"
-"Fast: One reboot after flash, one reboot after restore\n"
-"Slow: One reboot after flash, one reboot after restore in GUI"
 msgstr ""
 
 #, fuzzy
@@ -15272,9 +15276,6 @@ msgstr "nepatiess"
 msgid "fashion"
 msgstr "mode"
 
-msgid "fast"
-msgstr ""
-
 msgid "fileformats (BMP, PNG, JPG, GIF)"
 msgstr "failu formāti (BMP, PNG, JPG, GIF)"
 
@@ -15505,9 +15506,6 @@ msgstr "izvēlne"
 
 msgid "mins"
 msgstr "min."
-
-msgid "minutes"
-msgstr "minūtēm"
 
 #, fuzzy
 msgid "module disabled"
@@ -15948,9 +15946,6 @@ msgstr ""
 msgid "slot%s - %s mode 12 (current image)"
 msgstr "Aktivizēt pašreizējo konfigurāciju"
 
-msgid "slow"
-msgstr ""
-
 #, fuzzy
 msgid "soap/melodrama/folkloric"
 msgstr "ziepju opera/melodrāma/folklora"
@@ -16060,9 +16055,6 @@ msgstr "tūrisma/ceļošana"
 
 msgid "true"
 msgstr "patiesība"
-
-msgid "turbo"
-msgstr ""
 
 #, fuzzy
 msgid "type"
