--- a/po/nb.po
+++ b/po/nb.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 07:44+0200\n"
+"POT-Creation-Date: 2023-10-27 11:11+0200\n"
 "PO-Revision-Date: 2019-12-06 15:54+0100\n"
 "Last-Translator: GeirJ <dummy@dummy.com>\n"
 "Language-Team: GeirJ\n"
@@ -3041,10 +3041,6 @@ msgstr "Still inn tuneren som skal foretrekkes når samme kanal er tilgjengelig 
 msgid "Configure which tuner will be preferred, when more than one tuner is available. If set to 'auto' the system will give priority to the tuner having the lowest number of channels/satellites."
 msgstr "Still inn tuneren som skal foretrekkes når flere tunere er tilgjengelige. Hvis satt til 'auto', vil systemet gi prioritet til den tuneren som har lavest antall kanaler/satellitter."
 
-#, fuzzy
-msgid "Configure your NTP server."
-msgstr "Still inn navnetjenere"
-
 #
 msgid "Configure your internal LAN"
 msgstr "Still inn ditt lokale LAN nettverk"
@@ -3800,6 +3796,14 @@ msgstr "Dekode http strømmer"
 
 #, fuzzy
 msgid "Descramble sending http streams"
+msgstr "Dekode http strømmer"
+
+#, fuzzy
+msgid "Descramble service via streamrelay port"
+msgstr "Dekode http strømmer"
+
+#, fuzzy
+msgid "Descramble service via streamrelay url"
 msgstr "Dekode http strømmer"
 
 #
@@ -6097,6 +6101,11 @@ msgstr "HDMI-CEC innstilling"
 msgid "HDMI-IN Actions"
 msgstr ""
 
+#
+#, fuzzy
+msgid "HDMI-IN Recording settings"
+msgstr "Tar opp"
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "ikke støttet"
@@ -6289,9 +6298,6 @@ msgstr "Snarveistast zap"
 #, fuzzy
 msgid "Hotplug"
 msgstr "Last ned proramvaretillegg"
-
-msgid "Hour"
-msgstr ""
 
 msgid "Hourly"
 msgstr ""
@@ -6820,6 +6826,9 @@ msgstr "Internt flash"
 
 msgid "Internal hdd only"
 msgstr "Bare for intern hdd/ssd"
+
+msgid "Internet (ntp)"
+msgstr ""
 
 msgid "Interval between keys when repeating:"
 msgstr "Tidsintervall mellom repeterende tastetrykk"
@@ -7637,11 +7646,6 @@ msgstr "Modell:"
 
 #
 #, fuzzy
-msgid "Mode for autorestore"
-msgstr "Gjenopprett programvare"
-
-#
-#, fuzzy
 msgid "Model"
 msgstr "Type"
 
@@ -8058,13 +8062,8 @@ msgstr "NÅ"
 msgid "NOW"
 msgstr "NÅ"
 
-msgid "NTP"
+msgid "NTP Hostname"
 msgstr ""
-
-#
-#, fuzzy
-msgid "NTP server"
-msgstr "Navneserver"
 
 #
 msgid "NTSC"
@@ -8640,9 +8639,6 @@ msgstr "På slutten av filmen"
 msgid "On valid ONIDs, ignore frequency sub network part"
 msgstr ""
 
-msgid "Once per day"
-msgstr ""
-
 #
 msgid "One"
 msgstr "En"
@@ -9169,6 +9165,12 @@ msgstr "Spill siste"
 
 msgid "Play recorded movies..."
 msgstr "Spill av opptak..."
+
+msgid "Play service with streamrelay"
+msgstr ""
+
+msgid "Play service without streamrelay"
+msgstr ""
 
 #
 #, fuzzy
@@ -11368,6 +11370,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select how your box will upgrade."
 msgstr ""
 
@@ -11872,9 +11877,6 @@ msgstr "Menyoppsett"
 #
 msgid "Setup mode"
 msgstr "Menyoppsett"
-
-msgid "Setup network time synchronization interval."
-msgstr ""
 
 msgid "Setup your positioner"
 msgstr "Posisjonsoppsett"
@@ -13303,17 +13305,8 @@ msgstr ""
 msgid "Symlink to "
 msgstr ""
 
-msgid "Sync NTP every (minutes)"
-msgstr ""
-
 msgid "Sync failure moving back to origin !"
 msgstr "Synkroniseringsfeil, går tilbake til start!"
-
-msgid "Sync time using"
-msgstr ""
-
-msgid "Synchronize systemtime using transponder or internet."
-msgstr ""
 
 msgid "Syrian Arab Republic"
 msgstr ""
@@ -13484,6 +13477,9 @@ msgstr ""
 msgid "The EPG data will be stored every (hours)"
 msgstr ""
 
+msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
+
 msgid "The Image Viewer component of the File Commander requires the PicturePlayer extension. Install PicturePlayer to enable this operation."
 msgstr ""
 
@@ -13577,6 +13573,9 @@ msgstr ""
 msgid "The height of the picture. The input will be scaled to match this value."
 msgstr ""
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -13617,6 +13616,9 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "Banen %s finnes allerede."
+
+msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
 
 #
 #, fuzzy, python-format
@@ -14066,6 +14068,9 @@ msgstr ""
 msgid "Time scale"
 msgstr "Tids måler"
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time to execute command or script"
 msgstr ""
 
@@ -14301,6 +14306,11 @@ msgstr "Sendingstype"
 msgid "Transponder"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Transponder Time"
+msgstr "vis transponder info"
+
 msgid "Transport Stream Type"
 msgstr ""
 
@@ -14382,12 +14392,6 @@ msgid "Tuners & scanning"
 msgstr "Tuner"
 
 msgid "Tunisia"
-msgstr ""
-
-msgid ""
-"Turbo: One reboot after flash\n"
-"Fast: One reboot after flash, one reboot after restore\n"
-"Slow: One reboot after flash, one reboot after restore in GUI"
 msgstr ""
 
 #
@@ -16615,9 +16619,6 @@ msgstr "falsk"
 msgid "fashion"
 msgstr "mote"
 
-msgid "fast"
-msgstr ""
-
 #
 msgid "fileformats (BMP, PNG, JPG, GIF)"
 msgstr "filformat (BMP, PNG, JPG, GIF)"
@@ -16883,10 +16884,6 @@ msgstr "meny"
 #
 msgid "mins"
 msgstr "min"
-
-#
-msgid "minutes"
-msgstr "minutter"
 
 #
 #, fuzzy
@@ -17379,9 +17376,6 @@ msgstr ""
 msgid "slot%s - %s mode 12 (current image)"
 msgstr "Aktiver gjeldende konfigurasjon"
 
-msgid "slow"
-msgstr ""
-
 #, fuzzy
 msgid "soap/melodrama/folkloric"
 msgstr "såpe/melodrama/folklore"
@@ -17500,9 +17494,6 @@ msgstr "turisme/reise"
 
 msgid "true"
 msgstr "sant"
-
-msgid "turbo"
-msgstr ""
 
 #, fuzzy
 msgid "type"
