--- a/po/nl.po
+++ b/po/nl.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 07:44+0200\n"
+"POT-Creation-Date: 2023-10-27 11:11+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -2986,10 +2986,6 @@ msgstr ""
 msgid "Configure which tuner will be preferred, when more than one tuner is available. If set to 'auto' the system will give priority to the tuner having the lowest number of channels/satellites."
 msgstr "Met deze optie stelt u in welke tuner de voorkeurstuner is indien er meerdere tuners beschikbaar zijn. Indien gekozen wordt voor 'auto' zal er gekozen worden voor de tuner met het minste aantal zenders / satellieten. "
 
-#, fuzzy
-msgid "Configure your NTP server."
-msgstr "Configureer nameservers"
-
 msgid "Configure your internal LAN"
 msgstr "Configureer uw interne netwerk"
 
@@ -3676,6 +3672,14 @@ msgstr "Decoderen van http streams"
 
 #, fuzzy
 msgid "Descramble sending http streams"
+msgstr "Decoderen van http streams"
+
+#, fuzzy
+msgid "Descramble service via streamrelay port"
+msgstr "Decoderen van http streams"
+
+#, fuzzy
+msgid "Descramble service via streamrelay url"
 msgstr "Decoderen van http streams"
 
 msgid "Description"
@@ -5765,6 +5769,10 @@ msgid "HDMI-IN Actions"
 msgstr ""
 
 #, fuzzy
+msgid "HDMI-IN Recording settings"
+msgstr "Opname"
+
+#, fuzzy
 msgid "HDR10 support"
 msgstr "niet ondersteund"
 
@@ -5947,9 +5955,6 @@ msgstr ""
 #, fuzzy
 msgid "Hotplug"
 msgstr "Downloaden"
-
-msgid "Hour"
-msgstr ""
 
 msgid "Hourly"
 msgstr ""
@@ -6430,6 +6435,9 @@ msgstr "Intern geheugen"
 
 msgid "Internal hdd only"
 msgstr "Alleen interne harddisk"
+
+msgid "Internet (ntp)"
+msgstr ""
 
 msgid "Interval between keys when repeating:"
 msgstr "Tijd tussen toetsherhaling"
@@ -7160,10 +7168,6 @@ msgid "Mode %s (%04o)"
 msgstr "%s (%s)\n"
 
 #, fuzzy
-msgid "Mode for autorestore"
-msgstr "Software herstellen"
-
-#, fuzzy
 msgid "Model"
 msgstr "Modus "
 
@@ -7548,12 +7552,8 @@ msgstr "NU"
 msgid "NOW"
 msgstr "NU"
 
-msgid "NTP"
+msgid "NTP Hostname"
 msgstr ""
-
-#, fuzzy
-msgid "NTP server"
-msgstr "Nameserver"
 
 msgid "NTSC"
 msgstr "NTSC"
@@ -8078,9 +8078,6 @@ msgstr "Aan het einde van de film (conform menu)"
 msgid "On valid ONIDs, ignore frequency sub network part"
 msgstr ""
 
-msgid "Once per day"
-msgstr ""
-
 msgid "One"
 msgstr "Een"
 
@@ -8565,6 +8562,12 @@ msgstr "Vorige afspelen"
 
 msgid "Play recorded movies..."
 msgstr "Opname afspelen..."
+
+msgid "Play service with streamrelay"
+msgstr ""
+
+msgid "Play service without streamrelay"
+msgstr ""
 
 #, fuzzy
 msgid "Play title"
@@ -10580,6 +10583,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select how your box will upgrade."
 msgstr ""
 
@@ -11058,9 +11064,6 @@ msgstr "Instellingen menu"
 
 msgid "Setup mode"
 msgstr "Toegangsniveau instellen"
-
-msgid "Setup network time synchronization interval."
-msgstr ""
 
 msgid "Setup your positioner"
 msgstr "Instellen rotor"
@@ -12377,17 +12380,8 @@ msgstr ""
 msgid "Symlink to "
 msgstr ""
 
-msgid "Sync NTP every (minutes)"
-msgstr ""
-
 msgid "Sync failure moving back to origin !"
 msgstr "Sync probleem bij draaiing naar nulpunt !"
-
-msgid "Sync time using"
-msgstr ""
-
-msgid "Synchronize systemtime using transponder or internet."
-msgstr ""
 
 msgid "Syrian Arab Republic"
 msgstr ""
@@ -12554,6 +12548,9 @@ msgstr "De WiFi plugin is niet geïnstalleerd. Deze plugin eerst installeren aub
 msgid "The EPG data will be stored every (hours)"
 msgstr ""
 
+msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
+
 msgid "The Image Viewer component of the File Commander requires the PicturePlayer extension. Install PicturePlayer to enable this operation."
 msgstr ""
 
@@ -12639,6 +12636,9 @@ msgstr ""
 msgid "The height of the picture. The input will be scaled to match this value."
 msgstr ""
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -12678,6 +12678,9 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "Het pad %s bestaat al."
+
+msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
 
 #, fuzzy, python-format
 msgid "The results have been written to %s"
@@ -13091,6 +13094,9 @@ msgstr ""
 msgid "Time scale"
 msgstr "Tijdschaal"
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time to execute command or script"
 msgstr ""
 
@@ -13295,6 +13301,10 @@ msgstr "Transmissiemodus"
 msgid "Transponder"
 msgstr "Transponder"
 
+#, fuzzy
+msgid "Transponder Time"
+msgstr "Transponder"
+
 msgid "Transport Stream Type"
 msgstr ""
 
@@ -13365,12 +13375,6 @@ msgid "Tuners & scanning"
 msgstr "Tuner"
 
 msgid "Tunisia"
-msgstr ""
-
-msgid ""
-"Turbo: One reboot after flash\n"
-"Fast: One reboot after flash, one reboot after restore\n"
-"Slow: One reboot after flash, one reboot after restore in GUI"
 msgstr ""
 
 #, fuzzy
@@ -15482,9 +15486,6 @@ msgstr "incorrect"
 msgid "fashion"
 msgstr "mode"
 
-msgid "fast"
-msgstr ""
-
 msgid "fileformats (BMP, PNG, JPG, GIF)"
 msgstr "Bestandsformaat (BMP, PNG, JPG, GIF)"
 
@@ -15717,9 +15718,6 @@ msgstr "menu"
 
 msgid "mins"
 msgstr "min"
-
-msgid "minutes"
-msgstr "minuten"
 
 #, fuzzy
 msgid "module disabled"
@@ -16154,9 +16152,6 @@ msgstr ""
 msgid "slot%s - %s mode 12 (current image)"
 msgstr "Activeer de huidige configuratie"
 
-msgid "slow"
-msgstr ""
-
 #, fuzzy
 msgid "soap/melodrama/folkloric"
 msgstr "soap / melodrama / folklore"
@@ -16266,9 +16261,6 @@ msgstr "toerisme / reizen"
 
 msgid "true"
 msgstr "juist"
-
-msgid "turbo"
-msgstr ""
 
 #, fuzzy
 msgid "type"
