--- a/po/pt.po
+++ b/po/pt.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 07:44+0200\n"
+"POT-Creation-Date: 2023-10-27 11:11+0200\n"
 "PO-Revision-Date: 2014-12-15 19:38-0000\n"
 "Last-Translator: Phenom <phenomxy@gmail.com>\n"
 "Language-Team: Muaitai <muaitai@gmail.com>\n"
@@ -3183,11 +3183,6 @@ msgid "Configure which tuner will be preferred, when more than one tuner is avai
 msgstr "Configurar qual sintonizador preferido, quando mais de um sintonizador está disponível. Se for definido como 'auto' o sistema dará prioridade ao sintonizador que tem o menor número de canais/satélites."
 
 #
-#, fuzzy
-msgid "Configure your NTP server."
-msgstr "Configurar servidor DNS"
-
-#
 msgid "Configure your internal LAN"
 msgstr "Configure a sua rede LAN interna"
 
@@ -3968,6 +3963,14 @@ msgstr "Descodificar Streams HTTP"
 
 #, fuzzy
 msgid "Descramble sending http streams"
+msgstr "Descodificar Streams HTTP"
+
+#, fuzzy
+msgid "Descramble service via streamrelay port"
+msgstr "Descodificar Streams HTTP"
+
+#, fuzzy
+msgid "Descramble service via streamrelay url"
 msgstr "Descodificar Streams HTTP"
 
 #
@@ -6317,6 +6320,11 @@ msgstr "Configurações HDMI-CEC"
 msgid "HDMI-IN Actions"
 msgstr ""
 
+#
+#, fuzzy
+msgid "HDMI-IN Recording settings"
+msgstr "A gravar"
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "não suportado"
@@ -6520,9 +6528,6 @@ msgstr ""
 #, fuzzy
 msgid "Hotplug"
 msgstr "Descarregar Plugins"
-
-msgid "Hour"
-msgstr ""
 
 msgid "Hourly"
 msgstr ""
@@ -7056,6 +7061,9 @@ msgstr "Flash interna"
 
 msgid "Internal hdd only"
 msgstr "Apenas no disco rígido interno"
+
+msgid "Internet (ntp)"
+msgstr ""
 
 msgid "Interval between keys when repeating:"
 msgstr "Intervalo entre botões na repetição:"
@@ -7920,11 +7928,6 @@ msgstr "%s (%s)\n"
 
 #
 #, fuzzy
-msgid "Mode for autorestore"
-msgstr "Restauro de software"
-
-#
-#, fuzzy
 msgid "Model"
 msgstr "Modo"
 
@@ -8349,13 +8352,8 @@ msgstr "AGORA"
 msgid "NOW"
 msgstr "AGORA"
 
-msgid "NTP"
+msgid "NTP Hostname"
 msgstr ""
-
-#
-#, fuzzy
-msgid "NTP server"
-msgstr "Servidor DNS"
 
 #
 msgid "NTSC"
@@ -8960,9 +8958,6 @@ msgstr "No final do filme (como menu)"
 msgid "On valid ONIDs, ignore frequency sub network part"
 msgstr ""
 
-msgid "Once per day"
-msgstr ""
-
 #
 msgid "One"
 msgstr "Um"
@@ -9514,6 +9509,12 @@ msgstr "Reproduzir anterior"
 #
 msgid "Play recorded movies..."
 msgstr "Reproduzir filmes gravados..."
+
+msgid "Play service with streamrelay"
+msgstr ""
+
+msgid "Play service without streamrelay"
+msgstr ""
 
 #
 #, fuzzy
@@ -11890,6 +11891,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select how your box will upgrade."
 msgstr ""
 
@@ -12432,9 +12436,6 @@ msgstr "Menu de Definições"
 #, fuzzy
 msgid "Setup mode"
 msgstr "Modo configuração"
-
-msgid "Setup network time synchronization interval."
-msgstr ""
 
 msgid "Setup your positioner"
 msgstr "Configure o seu posicionador"
@@ -13957,17 +13958,8 @@ msgstr ""
 msgid "Symlink to "
 msgstr ""
 
-msgid "Sync NTP every (minutes)"
-msgstr ""
-
 msgid "Sync failure moving back to origin !"
 msgstr "Sincronização falhou, a voltar para a origem!"
-
-msgid "Sync time using"
-msgstr ""
-
-msgid "Synchronize systemtime using transponder or internet."
-msgstr ""
 
 msgid "Syrian Arab Republic"
 msgstr ""
@@ -14151,6 +14143,9 @@ msgstr ""
 msgid "The EPG data will be stored every (hours)"
 msgstr ""
 
+msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
+
 msgid "The Image Viewer component of the File Commander requires the PicturePlayer extension. Install PicturePlayer to enable this operation."
 msgstr ""
 
@@ -14247,6 +14242,9 @@ msgstr ""
 msgid "The height of the picture. The input will be scaled to match this value."
 msgstr ""
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 #
 #, fuzzy
 msgid ""
@@ -14289,6 +14287,9 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "O caminho %s já existe."
+
+msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
 
 #
 #, fuzzy, python-format
@@ -14741,6 +14742,9 @@ msgstr ""
 msgid "Time scale"
 msgstr "Escala de tempo"
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time to execute command or script"
 msgstr ""
 
@@ -14982,6 +14986,11 @@ msgstr "Modo de Transmissão"
 msgid "Transponder"
 msgstr "Transponder"
 
+#
+#, fuzzy
+msgid "Transponder Time"
+msgstr "Transponder"
+
 msgid "Transport Stream Type"
 msgstr ""
 
@@ -15069,12 +15078,6 @@ msgid "Tuners & scanning"
 msgstr "Sintonizador"
 
 msgid "Tunisia"
-msgstr ""
-
-msgid ""
-"Turbo: One reboot after flash\n"
-"Fast: One reboot after flash, one reboot after restore\n"
-"Slow: One reboot after flash, one reboot after restore in GUI"
 msgstr ""
 
 #
@@ -17400,9 +17403,6 @@ msgstr "falso"
 msgid "fashion"
 msgstr "moda"
 
-msgid "fast"
-msgstr ""
-
 #
 msgid "fileformats (BMP, PNG, JPG, GIF)"
 msgstr "formatos (BMP, PNG, JPG, GIF)"
@@ -17675,10 +17675,6 @@ msgstr "menu"
 #
 msgid "mins"
 msgstr "mins"
-
-#
-msgid "minutes"
-msgstr "minutos"
 
 #
 #, fuzzy
@@ -18183,9 +18179,6 @@ msgstr ""
 msgid "slot%s - %s mode 12 (current image)"
 msgstr "Activar configuração actual"
 
-msgid "slow"
-msgstr ""
-
 #, fuzzy
 msgid "soap/melodrama/folkloric"
 msgstr "drama/folclórico"
@@ -18310,9 +18303,6 @@ msgstr "turismo/viagens"
 
 msgid "true"
 msgstr "verdadeiro"
-
-msgid "turbo"
-msgstr ""
 
 #, fuzzy
 msgid "type"
