--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 07:44+0200\n"
+"POT-Creation-Date: 2023-10-27 11:11+0200\n"
 "PO-Revision-Date: 2017-03-05 13:24+0100\n"
 "Last-Translator: Magnus Nilsson <mag_nilsson@hotmail.com>\n"
 "Language-Team: \n"
@@ -3113,11 +3113,6 @@ msgid "Configure which tuner will be preferred, when more than one tuner is avai
 msgstr "Konfigurera vilken tuner som kommer att föredras, då mer än en tuner är tillgänglig. Om du väljer 'auto' kommer systemet att prioritera tunern som har det lägsta antalet kanaler/satelliter."
 
 #
-#, fuzzy
-msgid "Configure your NTP server."
-msgstr "Konfigurera namnservers"
-
-#
 msgid "Configure your internal LAN"
 msgstr "Konfigurera ditt interna LAN"
 
@@ -3885,6 +3880,14 @@ msgstr "Avkoda http-strömmar"
 
 #, fuzzy
 msgid "Descramble sending http streams"
+msgstr "Avkoda http-strömmar"
+
+#, fuzzy
+msgid "Descramble service via streamrelay port"
+msgstr "Avkoda http-strömmar"
+
+#, fuzzy
+msgid "Descramble service via streamrelay url"
 msgstr "Avkoda http-strömmar"
 
 #
@@ -6202,6 +6205,11 @@ msgstr ""
 msgid "HDMI-IN Actions"
 msgstr ""
 
+#
+#, fuzzy
+msgid "HDMI-IN Recording settings"
+msgstr "Spelar in"
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "stöds ej"
@@ -6401,9 +6409,6 @@ msgstr ""
 #, fuzzy
 msgid "Hotplug"
 msgstr "Ladda ner plugins"
-
-msgid "Hour"
-msgstr ""
 
 msgid "Hourly"
 msgstr ""
@@ -6932,6 +6937,9 @@ msgstr "Intern Flash"
 
 msgid "Internal hdd only"
 msgstr "Intern HDD bara"
+
+msgid "Internet (ntp)"
+msgstr ""
 
 msgid "Interval between keys when repeating:"
 msgstr "Intervall mellan tangenttryckningar vid upprepning:"
@@ -7761,11 +7769,6 @@ msgstr "%s (%s)\n"
 
 #
 #, fuzzy
-msgid "Mode for autorestore"
-msgstr "Mjukvaruåterskapa"
-
-#
-#, fuzzy
 msgid "Model"
 msgstr "Läge"
 
@@ -8189,13 +8192,8 @@ msgstr "NU"
 msgid "NOW"
 msgstr "NU"
 
-msgid "NTP"
+msgid "NTP Hostname"
 msgstr ""
-
-#
-#, fuzzy
-msgid "NTP server"
-msgstr "Namnserver"
 
 #
 msgid "NTSC"
@@ -8784,9 +8782,6 @@ msgstr ""
 msgid "On valid ONIDs, ignore frequency sub network part"
 msgstr ""
 
-msgid "Once per day"
-msgstr ""
-
 #
 msgid "One"
 msgstr "En"
@@ -9323,6 +9318,12 @@ msgstr "Spela föregående"
 #
 msgid "Play recorded movies..."
 msgstr "Spela inspelade filmer..."
+
+msgid "Play service with streamrelay"
+msgstr ""
+
+msgid "Play service without streamrelay"
+msgstr ""
 
 #
 #, fuzzy
@@ -11654,6 +11655,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select how your box will upgrade."
 msgstr ""
 
@@ -12183,9 +12187,6 @@ msgstr "Installationsmeny"
 #
 msgid "Setup mode"
 msgstr "Installationsläge"
-
-msgid "Setup network time synchronization interval."
-msgstr ""
 
 msgid "Setup your positioner"
 msgstr "Ställ in din position"
@@ -13668,17 +13669,8 @@ msgstr ""
 msgid "Symlink to "
 msgstr ""
 
-msgid "Sync NTP every (minutes)"
-msgstr ""
-
 msgid "Sync failure moving back to origin !"
 msgstr "Synkfel, flyttar tillbaks till ursprungsläget!"
-
-msgid "Sync time using"
-msgstr ""
-
-msgid "Synchronize systemtime using transponder or internet."
-msgstr ""
 
 msgid "Syrian Arab Republic"
 msgstr ""
@@ -13857,6 +13849,9 @@ msgstr ""
 msgid "The EPG data will be stored every (hours)"
 msgstr ""
 
+msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
+
 msgid "The Image Viewer component of the File Commander requires the PicturePlayer extension. Install PicturePlayer to enable this operation."
 msgstr ""
 
@@ -13951,6 +13946,9 @@ msgstr ""
 msgid "The height of the picture. The input will be scaled to match this value."
 msgstr ""
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 #
 msgid ""
 "The network wizard extension is not installed!\n"
@@ -13992,6 +13990,9 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "Sökvägen %s existerar redan."
+
+msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
 
 #
 #, fuzzy, python-format
@@ -14436,6 +14437,9 @@ msgstr ""
 msgid "Time scale"
 msgstr "Tidsskala"
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time to execute command or script"
 msgstr ""
 
@@ -14672,6 +14676,11 @@ msgstr "Sändningstyp"
 msgid "Transponder"
 msgstr "Transponder"
 
+#
+#, fuzzy
+msgid "Transponder Time"
+msgstr "Transponder"
+
 msgid "Transport Stream Type"
 msgstr ""
 
@@ -14756,12 +14765,6 @@ msgid "Tuners & scanning"
 msgstr "Tuner"
 
 msgid "Tunisia"
-msgstr ""
-
-msgid ""
-"Turbo: One reboot after flash\n"
-"Fast: One reboot after flash, one reboot after restore\n"
-"Slow: One reboot after flash, one reboot after restore in GUI"
 msgstr ""
 
 #
@@ -17050,9 +17053,6 @@ msgstr "falskt"
 msgid "fashion"
 msgstr "mode"
 
-msgid "fast"
-msgstr ""
-
 #
 msgid "fileformats (BMP, PNG, JPG, GIF)"
 msgstr "filformat (BMP, PNG, JPG, GIF)"
@@ -17321,10 +17321,6 @@ msgstr "meny"
 #
 msgid "mins"
 msgstr "min"
-
-#
-msgid "minutes"
-msgstr "minuter"
 
 #
 #, fuzzy
@@ -17836,9 +17832,6 @@ msgstr ""
 msgid "slot%s - %s mode 12 (current image)"
 msgstr "Aktivera nuvarande konfiguration"
 
-msgid "slow"
-msgstr ""
-
 #, fuzzy
 msgid "soap/melodrama/folkloric"
 msgstr "såpa/melodrama/folkloristisk"
@@ -17963,9 +17956,6 @@ msgstr "turism/resor"
 
 msgid "true"
 msgstr "sann"
-
-msgid "turbo"
-msgstr ""
 
 #, fuzzy
 msgid "type"
