--- a/po/tr.po
+++ b/po/tr.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue (Apachi70)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 07:44+0200\n"
-"PO-Revision-Date: 2022-05-26 15:48+0200\n"
+"POT-Creation-Date: 2023-10-27 11:11+0200\n"
+"PO-Revision-Date: 2023-10-27 11:28+0200\n"
 "Last-Translator: Apachi70 <teamblue@online.de>\n"
 "Language-Team: teamblue@t-online.de(apachi70)\n"
 "Language: tr_TR\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural= (1 != 1);\n"
-"X-Generator: Poedit 3.0.1\n"
+"X-Generator: Poedit 3.4\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 msgid ""
@@ -94,7 +94,7 @@ msgid ""
 msgstr ""
 "\n"
 "isteğe bağlı parametreler:\n"
-"% s"
+"%s"
 
 msgid " "
 msgstr "  "
@@ -110,15 +110,15 @@ msgstr "     yanlış yedekleme hedefi "
 
 #, python-format
 msgid " ('%s') finished successefully."
-msgstr " ('% s') başarıyla tamamlandı."
+msgstr " ('%s') başarıyla tamamlandı."
 
 #, python-format
 msgid " ('%s') finished with error messages."
-msgstr " ('% s') hata mesajlarıyla tamamlandı."
+msgstr " ('%s') hata mesajlarıyla tamamlandı."
 
 #, python-format
 msgid " ('%s') finished with error number [%d]."
-msgstr " ('% s') [% d] hata numarasıyla tamamlandı."
+msgstr " ('%s') [%d] hata numarasıyla tamamlandı."
 
 msgid " (+5 volt terrestrial)"
 msgstr " (+5 volt karasal)"
@@ -160,7 +160,7 @@ msgstr " (herhangi bir otomatikden daha düşük)"
 
 #, python-format
 msgid " - %d elements exist! Overwrite"
-msgstr " -% d element var! Üzerine Yaz"
+msgstr " -%d element var! Üzerine Yaz"
 
 msgid " - 1 element exist! Overwrite"
 msgstr " -1 element var! Üzerine Yaz"
@@ -174,9 +174,8 @@ msgstr " -dosya var! Üzerine Yaz"
 msgid " - folder exist! Overwrite"
 msgstr " - klasör var! Üzerine Yaz"
 
-#, fuzzy
 msgid " - information"
-msgstr "Bilgi"
+msgstr " - Bilgi"
 
 msgid " Warning: the selected tuner should not use SCR Unicable type for LNBs because each tuner need a own SCR number."
 msgstr " Uyarı: Her tuner kendi SCR numarasına ihtiyaç duyduğundan, seçilen tuner LNB'ler için SCR Unicable tipini kullanmamalıdır."
@@ -268,7 +267,7 @@ msgstr[0] "%d çekirdek"
 #, python-format
 msgid "%d day"
 msgid_plural "%d days"
-msgstr[0] "% d gün"
+msgstr[0] "%d gün"
 
 #, python-format
 msgid "%d file"
@@ -277,7 +276,7 @@ msgstr[0] "%d dosya"
 
 #, python-format
 msgid "%d fps"
-msgstr "% d fps"
+msgstr "%d fps"
 
 #, python-format
 msgid "%d hour"
@@ -384,7 +383,7 @@ msgid ""
 "Press ok for multiboot selection\n"
 "Press exit to close"
 msgstr ""
-"% s\n"
+"%s\n"
 "Çoklu önyükleme seçimi için tamam'a basın\n"
 "Kapatmak için çıkışa basın"
 
@@ -410,7 +409,7 @@ msgstr "%d dosya"
 
 #, python-format
 msgid "%s - extraction errors."
-msgstr "% s - çıkarma hataları."
+msgstr "%s - çıkarma hataları."
 
 #, python-format
 msgid "%s KSymb/s"
@@ -422,7 +421,7 @@ msgstr "%s MHz"
 
 #, fuzzy, python-format
 msgid "%s connected successfully."
-msgstr " ('% s') başarıyla tamamlandı."
+msgstr " ('%s') başarıyla tamamlandı."
 
 #, python-format
 msgid "%s imported from fallback tuner"
@@ -435,11 +434,11 @@ msgstr "Artık %s kullanılmamaktadır. Bu silinmelidir?"
 
 #, python-format
 msgid "%s is password protected."
-msgstr "% s şifre korumalı."
+msgstr "%s şifre korumalı."
 
 #, python-format
 msgid "%s successfully extracted."
-msgstr "% s başarıyla çıkarıldı."
+msgstr "%s başarıyla çıkarıldı."
 
 #, python-format
 msgid "%s updated package available"
@@ -452,7 +451,7 @@ msgstr "%s: %s"
 
 #, python-format
 msgid "'%s' not installed and no known package"
-msgstr "'% s' kurulu değil ve bilinen paket yok"
+msgstr "'%s' kurulu değil ve bilinen paket yok"
 
 msgid "'Minimum send interval' needs to be enabled to use this option."
 msgstr ""
@@ -504,7 +503,7 @@ msgstr "-SERVİS YOK\n"
 
 #, python-format
 msgid "-SERVICE ERROR:%d\n"
-msgstr "-SERVICE ERROR:% d\n"
+msgstr "-SERVICE ERROR:%d\n"
 
 msgid "..."
 msgstr "..."
@@ -1491,7 +1490,7 @@ msgstr "Yedekleme araci için %s\n"
 
 #, python-format
 msgid "Back-up Tool for an %s\n"
-msgstr "Yedekleme Aracı % s\n"
+msgstr "Yedekleme Aracı %s\n"
 
 msgid "Background"
 msgstr "Arkaplan"
@@ -1507,14 +1506,14 @@ msgstr "Arka planda silme hızı"
 
 #, fuzzy, python-format
 msgid "Backing up to: %s"
-msgstr "Yedek Tarihi:% s\n"
+msgstr "Yedek Tarihi:%s\n"
 
 msgid "Backup"
 msgstr "Yedekle"
 
 #, python-format
 msgid "Backup Date: %s\n"
-msgstr "Yedek Tarihi:% s\n"
+msgstr "Yedek Tarihi:%s\n"
 
 msgid "Backup Image"
 msgstr "İmaj Yedekle"
@@ -1550,7 +1549,7 @@ msgstr "Sistem ayarlarını yedekle"
 
 #, python-format
 msgid "Backup to destination: %s"
-msgstr "Hedefe yedekle:% s"
+msgstr "Hedefe yedekle:%s"
 
 msgid "Backup your Receiver settings."
 msgstr "Alıcı ayarlarınızı yedekleyin."
@@ -1723,7 +1722,7 @@ msgstr "Arabelleğe alma %d%%"
 
 #, python-format
 msgid "Build: %s"
-msgstr "Derleme: % s"
+msgstr "Derleme: %s"
 
 msgid "Bulgaria"
 msgstr "Bulgaristan"
@@ -2044,7 +2043,7 @@ msgstr "Zamanlayıcı değiştir"
 
 #, python-format
 msgid "Changing keymap failed (%s)."
-msgstr "Değişen keymap (% s) başarısız oldu."
+msgstr "Değişen keymap (%s) başarısız oldu."
 
 msgid "Channel"
 msgstr "Kanal"
@@ -2695,9 +2694,6 @@ msgstr "Aynı servis farklı tuner tiplerinde mevcut olduğunda hangi tuner tipi
 msgid "Configure which tuner will be preferred, when more than one tuner is available. If set to 'auto' the system will give priority to the tuner having the lowest number of channels/satellites."
 msgstr "Birden fazla tuner varken, tercih edilen tuneri yapılandırın. 'Otomatik' olarak ayarlanırsa, sistem kanal/uydu en küçük numaralı tunere öncelik verecektir."
 
-msgid "Configure your NTP server."
-msgstr "NTP sunucunuzu yapılandırın."
-
 msgid "Configure your internal LAN"
 msgstr "Yerel ağ ayarlarınızı yapılandırın"
 
@@ -2836,7 +2832,7 @@ msgstr "Bukete kopyala"
 
 #, python-format
 msgid "Cores: %s"
-msgstr "Renkler: % s"
+msgstr "Renkler: %s"
 
 #, fuzzy
 msgid "Correct invalid EPG data"
@@ -3013,7 +3009,7 @@ msgstr "Film düzenleyici..."
 
 #, python-format
 msgid "Cylinders: %s (max) %s (current)"
-msgstr "Silindir:% s (max)% s (güncel)"
+msgstr "Silindir:%s (max)%s (güncel)"
 
 msgid "Cylinders: unknown"
 msgstr "Silindir: bilinmiyor"
@@ -3337,6 +3333,14 @@ msgstr "Http akışlarını alma Descramble"
 msgid "Descramble sending http streams"
 msgstr "Http akışlarını göndermek"
 
+#, fuzzy
+msgid "Descramble service via streamrelay port"
+msgstr "Http akışlarını alma Descramble"
+
+#, fuzzy
+msgid "Descramble service via streamrelay url"
+msgstr "Http akışlarını alma Descramble"
+
 msgid "Description"
 msgstr "Açıklama"
 
@@ -3379,7 +3383,7 @@ msgid ""
 "Restart your %s %s now?"
 msgstr ""
 "Cihaz Sabit Dağı Nokta değişikliğin yürürlüğe girmesi için sistemi yeniden başlatmayı gerektirir.\n"
-"şimdi% s% s yeniden başlatın?"
+"şimdi%s%s yeniden başlatın?"
 
 msgid "Device Manager"
 msgstr "Aygıt Yöneticisi"
@@ -3578,7 +3582,7 @@ msgstr "Çıkmak istediğinize emin misiniz?"
 
 #, python-format
 msgid "Do you really want to hold the plugin \"%s\"?"
-msgstr "Gerçekten eklenti \"% s\" tutmak istiyor musunuz?"
+msgstr "Gerçekten eklenti \"%s\" tutmak istiyor musunuz?"
 
 msgid ""
 "Do you really want to initialize the device?\n"
@@ -3643,13 +3647,13 @@ msgstr "Kanal araması yapmak ister misiniz?"
 msgid "Do you want to do another manual service scan?"
 msgstr "Başka kanal araması yapacak mısınız?"
 
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "Do you want to flash image\n"
 "%s?"
 msgstr ""
-"Görüntüyü flaş etmek ister misin\n"
-"%s"
+"Görüntüyü flaşlamak istiyor musunuz\n"
+"%s?"
 
 msgid "Do you want to install a channel list?"
 msgstr "Bir kanal listesi yüklemek istiyor musunuz?"
@@ -4007,7 +4011,7 @@ msgstr "Otomatik hızlı tarama etkinleştir"
 
 #, python-format
 msgid "Enable auto fastscan for %s"
-msgstr "Otomatik hızlı tarama etkinleştir % s"
+msgstr "Otomatik hızlı tarama etkinleştir %s"
 
 #, fuzzy
 msgid "Enable bluetooth audio"
@@ -4241,7 +4245,7 @@ msgid ""
 "%s"
 msgstr ""
 "Görüntü indirilirken hata\n"
-"% s\n"
+"%s\n"
 "%s"
 
 #, python-format
@@ -4274,7 +4278,7 @@ msgid ""
 "Error renaming %s to %s:\n"
 "%s"
 msgstr ""
-"%s ile % s olarak yeniden adlandırma hatası:\n"
+"%s ile %s olarak yeniden adlandırma hatası:\n"
 "%s"
 
 msgid "Error when writing epg.dat on server"
@@ -4294,7 +4298,7 @@ msgid ""
 "%s"
 msgstr ""
 "Geri dönüş zamanlayıcı bilgisi geri verilirken hata oluştu\n"
-"% s"
+"%s"
 
 #, fuzzy
 msgid "Error while retrieving location of epg.dat on the fallback receiver"
@@ -4509,7 +4513,7 @@ msgid ""
 "connected to %s"
 msgstr ""
 "FBC otomatik\n"
-"% s ile bağlı"
+"%s ile bağlı"
 
 msgid ""
 "FBC automatic\n"
@@ -4813,7 +4817,7 @@ msgid ""
 "Restart your %s %s now?"
 msgstr ""
 "İlk / medya / hdd Depolama Aygıtı başlatmak monte düzeltildi. Bu etkiyi almak için sistemi yeniden başlatmayı gerektirir.\n"
-"şimdi% s% s yeniden başlat?"
+"şimdi%s%s yeniden başlat?"
 
 msgid "Flash Image"
 msgstr "Flaş Image"
@@ -5205,7 +5209,7 @@ msgid "Guyana"
 msgstr "Guyana"
 
 msgid "H: = Hourly / D: = Daily / W: = Weekly / M: = Monthly"
-msgstr ""
+msgstr "H: = Saatlik / D: = Günlük / W: = Haftalık / M: = Aylık"
 
 msgid "HD list"
 msgstr "HD listesi"
@@ -5258,6 +5262,10 @@ msgstr "HDMI-CEC kurulumu"
 
 msgid "HDMI-IN Actions"
 msgstr "HDMI-IN Eylemleri"
+
+#, fuzzy
+msgid "HDMI-IN Recording settings"
+msgstr "HDMI Kaydı"
 
 msgid "HDR10 support"
 msgstr "HDR10 desteği"
@@ -5312,7 +5320,7 @@ msgstr "HddMount"
 
 #, python-format
 msgid "Heads: %s (max) %s (current)"
-msgstr "Başlar:% s (max)% s (güncel)"
+msgstr "Başlar:%s (max)%s (güncel)"
 
 msgid "Heads: unknown"
 msgstr "Başlar: bilinmiyor"
@@ -5422,9 +5430,6 @@ msgstr "Kısayol kanal değişimi"
 
 msgid "Hotplug"
 msgstr "Hotplug"
-
-msgid "Hour"
-msgstr "Saat"
 
 #, fuzzy
 msgid "Hourly"
@@ -5872,6 +5877,9 @@ msgstr "Dahili hafıza"
 msgid "Internal hdd only"
 msgstr "Yanlız dahili HDD"
 
+msgid "Internet (ntp)"
+msgstr ""
+
 msgid "Interval between keys when repeating:"
 msgstr "Yinelenen anahtarlar arasındaki aralık:"
 
@@ -6116,7 +6124,7 @@ msgstr "En Son İşlenenler"
 
 #, python-format
 msgid "Latest available teamBlue %s build is from: %s"
-msgstr "En son kullanılabilen teamBlue% s build şudur:%s"
+msgstr "En son kullanılabilen teamBlue%s build şudur:%s"
 
 msgid "Latest update log"
 msgstr "En son güncelleme günlüğü"
@@ -6561,9 +6569,6 @@ msgstr "Mod"
 msgid "Mode %s (%04o)"
 msgstr "Mode %s (%04o)"
 
-msgid "Mode for autorestore"
-msgstr "Otomatik depolama modu"
-
 msgid "Model"
 msgstr "Model"
 
@@ -6909,11 +6914,9 @@ msgstr "HAYIR"
 msgid "NOW"
 msgstr "ŞİMDİ"
 
-msgid "NTP"
-msgstr "NTP"
-
-msgid "NTP server"
-msgstr "NTP sunucusu"
+#, fuzzy
+msgid "NTP Hostname"
+msgstr "Makina adı:"
 
 msgid "NTSC"
 msgstr "NTSC"
@@ -7039,7 +7042,7 @@ msgid "Next"
 msgstr "Sonraki"
 
 msgid "Next day starts at"
-msgstr ""
+msgstr "Ertesi gün başlıyor"
 
 msgid "Nicaragua"
 msgstr "Nikaragua"
@@ -7402,9 +7405,6 @@ msgstr "Filmin sonunda üzerinde (menüsü gibi)"
 
 msgid "On valid ONIDs, ignore frequency sub network part"
 msgstr "Geçerli ONID'lerde, frekans alt ağ bölümünü yoksay"
-
-msgid "Once per day"
-msgstr "Günde bir kez"
 
 msgid "One"
 msgstr "Bir"
@@ -7838,6 +7838,12 @@ msgstr "Öncekini oynat"
 
 msgid "Play recorded movies..."
 msgstr "Kayıtlı video dosyalarını göster..."
+
+msgid "Play service with streamrelay"
+msgstr ""
+
+msgid "Play service without streamrelay"
+msgstr ""
 
 msgid "Play title"
 msgstr "Başlığı oynat"
@@ -9376,7 +9382,7 @@ msgstr "Eklenen SR'leri ara"
 #, python-format
 msgid "Scan completed, %d channel found."
 msgid_plural "Scan completed, %d channels found."
-msgstr[0] "Tarama tamamlandı,% d kanal bulundu."
+msgstr[0] "Tarama tamamlandı,%d kanal bulundu."
 
 msgid "Scan failed!"
 msgstr "Tarama başarısız!"
@@ -9663,6 +9669,9 @@ msgstr "Çanağın uydular arasında ne kadar hızlı hareket etmesi gerektiğin
 
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr "Uydu çanağının nasıl ayarlandığını seçin. sabit çanak, tek LNB, DiSEqC anahtarı, konumlandırıcı, vb."
+
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
 
 msgid "Select how your box will upgrade."
 msgstr "Alıcının nasıl yükseltileceğini seçin."
@@ -10098,9 +10107,6 @@ msgstr "Kurulum Menüsü"
 
 msgid "Setup mode"
 msgstr "Kurulum Modu"
-
-msgid "Setup network time synchronization interval."
-msgstr "Kur, ağ zaman senkronizasyonu aralığı."
 
 msgid "Setup your positioner"
 msgstr "Pozisyoner kurulumu"
@@ -10577,7 +10583,7 @@ msgstr "Boyut:"
 
 #, python-format
 msgid "Skin & Resolution: %s (%sx%s)"
-msgstr "Cilt ve Çözünürlük:% s (% sx% s)"
+msgstr "Cilt ve Çözünürlük:%s (%sx%s)"
 
 msgid "Skin Selection Actions"
 msgstr "Arayüz Seçimi Eylemleri"
@@ -11303,17 +11309,8 @@ msgstr "Sembolik bağlantı"
 msgid "Symlink to "
 msgstr "İçin bağlantı "
 
-msgid "Sync NTP every (minutes)"
-msgstr "NTP senkronizasyonu (dakika)"
-
 msgid "Sync failure moving back to origin !"
 msgstr "Senkronizasyon hatası geriye orjine hareket  !"
-
-msgid "Sync time using"
-msgstr "Kullanılan zaman senkronizasyonu"
-
-msgid "Synchronize systemtime using transponder or internet."
-msgstr "İnternet veya transponder kullanarak sistem saatini senkronize et."
 
 msgid "Syrian Arab Republic"
 msgstr "Suriye Arap Cumhuriyeti"
@@ -11449,7 +11446,7 @@ msgstr ""
 
 #, python-format
 msgid "The %d min remaining before the end of the event."
-msgstr "Olayın sonuna kadar kalan% d dak."
+msgstr "Olayın sonuna kadar kalan%d dak."
 
 msgid "The DVD standard doesn't support H.264 (HDTV) video streams."
 msgstr "DVD standardı H.264 (HDTV) video akışlarını desteklemez."
@@ -11463,6 +11460,9 @@ msgstr ""
 
 msgid "The EPG data will be stored every (hours)"
 msgstr "EPG verileri her (saatte) bir saklanacaktır."
+
+msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
 
 msgid "The Image Viewer component of the File Commander requires the PicturePlayer extension. Install PicturePlayer to enable this operation."
 msgstr "File Commander'ın Image Viewer bileşeni, PicturePlayer uzantısını gerektirir. Bu işlemi etkinleştirmek için PicturePlayer'ı yükleyin."
@@ -11550,6 +11550,9 @@ msgstr "Bir dizinin karması hesaplanamaz."
 msgid "The height of the picture. The input will be scaled to match this value."
 msgstr "Resmin yüksekliği. Girdi, bu değere uyacak şekilde ölçeklendirilecektir."
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -11606,6 +11609,9 @@ msgstr "Parola boş olamaz."
 #, python-format
 msgid "The path %s already exists."
 msgstr "%s yolu zaten var."
+
+msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
 
 #, python-format
 msgid "The results have been written to %s"
@@ -12021,6 +12027,9 @@ msgstr "Bu işlem için gereken süre:%s"
 msgid "Time scale"
 msgstr "Zaman cetveli"
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time to execute command or script"
 msgstr ""
 
@@ -12210,6 +12219,10 @@ msgstr "İletim (transmisyon) modu"
 msgid "Transponder"
 msgstr "Transponder"
 
+#, fuzzy
+msgid "Transponder Time"
+msgstr "Transponder"
+
 msgid "Transport Stream Type"
 msgstr "Taşıma Akışı Türü"
 
@@ -12275,15 +12288,6 @@ msgstr "Alıcı"
 
 msgid "Tunisia"
 msgstr "Tunus"
-
-msgid ""
-"Turbo: One reboot after flash\n"
-"Fast: One reboot after flash, one reboot after restore\n"
-"Slow: One reboot after flash, one reboot after restore in GUI"
-msgstr ""
-"Turbo: Flaştan sonra bir yeniden başlatma\n"
-"Hızlı: Flaştan sonra bir yeniden başlatma, geri yüklemeden sonra bir yeniden başlatma\n"
-"Yavaş: Flash'tan sonra bir yeniden başlatma, GUI'de geri yüklemeden sonra bir yeniden başlatma"
 
 msgid "Turkey"
 msgstr "Türkiye"
@@ -13041,7 +13045,7 @@ msgid ""
 "Component: enigma2"
 msgstr ""
 "Gerçekten üzgünüz. Alıcınız bir yazılım sorunuyla karşılaştı ve yeniden başlatılması gerekiyor.\n"
-"Lütfen logfile% senigma2_crash_xxxxxx.log dosyasını www.teamblue.tech adresine gönderiniz.\n"
+"Lütfen logfile%senigma2_crash_xxxxxx.log dosyasını www.teamblue.tech adresine gönderiniz.\n"
 "Alıcınız 10 saniye içinde yeniden başlatılıyor!\n"
 "Bileşen: enigma2"
 
@@ -13654,7 +13658,7 @@ msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
-msgstr "%s hizmetine geçmelisiniz (%s - '% s')!\n"
+msgstr "%s hizmetine geçmelisiniz (%s - '%s')!\n"
 
 msgid ""
 "You need a PC connected to your %s %s. If you need further instructions, please visit the website https://www.opena.tv.\n"
@@ -13916,7 +13920,7 @@ msgstr "Resim İçinde Resim %s olarak zamanlayıcı hizmetine bağlanıldı!"
 
 #, python-format
 msgid "Zapped to timer service %s!"
-msgstr "Zamanlayıcı servisine% s eklendi!"
+msgstr "Zamanlayıcı servisine%s eklendi!"
 
 msgid "Zgemma H.S/H.2S/H.2H/H5/H7"
 msgstr "Zgemma H.S/H.2S/H.2H/H5/H7"
@@ -14313,9 +14317,6 @@ msgstr "yanlış"
 msgid "fashion"
 msgstr "moda"
 
-msgid "fast"
-msgstr "hizli"
-
 msgid "fileformats (BMP, PNG, JPG, GIF)"
 msgstr "dosya biçimi (BMP, PNG, JPG, GIF)"
 
@@ -14533,9 +14534,6 @@ msgid "menu"
 msgstr "menü"
 
 msgid "mins"
-msgstr "dakika"
-
-msgid "minutes"
 msgstr "dakika"
 
 #, fuzzy
@@ -14952,9 +14950,6 @@ msgstr "yuva%s - %s "
 msgid "slot%s - %s mode 12 (current image)"
 msgstr "alan%s -%s (geçerli image)"
 
-msgid "slow"
-msgstr "yavaş"
-
 msgid "soap/melodrama/folkloric"
 msgstr "soap/melodrama/folkloric"
 
@@ -14983,7 +14978,7 @@ msgid "standard"
 msgstr "standart"
 
 msgid "standby"
-msgstr "Hazırda beklet "
+msgstr "Yanında olmak"
 
 msgid "start cut here"
 msgstr "buradan kes"
@@ -15054,9 +15049,6 @@ msgstr "turizm / seyahat"
 
 msgid "true"
 msgstr "doğru"
-
-msgid "turbo"
-msgstr "turbo"
 
 msgid "type"
 msgstr "tip"
