--- a/po/fa.po
+++ b/po/fa.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 07:44+0200\n"
+"POT-Creation-Date: 2023-10-27 11:11+0200\n"
 "PO-Revision-Date: 2018-02-14 16:51+0330\n"
 "Last-Translator: Persian Prince <persianprince@pe4k.com>\n"
 "Language-Team: Persian Professionals <persianpros@yahoo.com>\n"
@@ -2835,11 +2835,6 @@ msgid "Configure which tuner will be preferred, when more than one tuner is avai
 msgstr ""
 
 #
-#, fuzzy
-msgid "Configure your NTP server."
-msgstr "پیکربندی nameservers"
-
-#
 msgid "Configure your internal LAN"
 msgstr "شبکه سیمی داخلی خود را دوباره پیکربندی کنید"
 
@@ -3545,6 +3540,14 @@ msgstr "شامل ATT در جریان های http"
 
 #, fuzzy
 msgid "Descramble sending http streams"
+msgstr "شامل ATT در جریان های http"
+
+#, fuzzy
+msgid "Descramble service via streamrelay port"
+msgstr "شامل ATT در جریان های http"
+
+#, fuzzy
+msgid "Descramble service via streamrelay url"
 msgstr "شامل ATT در جریان های http"
 
 msgid "Description"
@@ -5628,6 +5631,10 @@ msgstr ""
 msgid "HDMI-IN Actions"
 msgstr ""
 
+#, fuzzy
+msgid "HDMI-IN Recording settings"
+msgstr "در حال ضبط"
+
 msgid "HDR10 support"
 msgstr ""
 
@@ -5809,9 +5816,6 @@ msgstr ""
 #, fuzzy
 msgid "Hotplug"
 msgstr "دانلود پلاگین ها"
-
-msgid "Hour"
-msgstr ""
 
 msgid "Hourly"
 msgstr ""
@@ -6300,6 +6304,9 @@ msgstr "فلش داخلی"
 
 msgid "Internal hdd only"
 msgstr "فقط هارد داخلی"
+
+msgid "Internet (ntp)"
+msgstr ""
 
 msgid "Interval between keys when repeating:"
 msgstr ""
@@ -7064,10 +7071,6 @@ msgid "Mode %s (%04o)"
 msgstr "%s (%s)\n"
 
 #, fuzzy
-msgid "Mode for autorestore"
-msgstr "بازگردانی نرم افزار"
-
-#, fuzzy
 msgid "Model"
 msgstr "حالت"
 
@@ -7446,12 +7449,8 @@ msgstr "اکنون"
 msgid "NOW"
 msgstr "اکنون"
 
-msgid "NTP"
+msgid "NTP Hostname"
 msgstr ""
-
-#, fuzzy
-msgid "NTP server"
-msgstr "Nameserver"
 
 msgid "NTSC"
 msgstr "NTSC"
@@ -7971,9 +7970,6 @@ msgstr ""
 msgid "On valid ONIDs, ignore frequency sub network part"
 msgstr ""
 
-msgid "Once per day"
-msgstr ""
-
 msgid "One"
 msgstr "یک"
 
@@ -8469,6 +8465,12 @@ msgstr "پخش قبلی"
 
 msgid "Play recorded movies..."
 msgstr "پخش فیلم های ضبط شده"
+
+msgid "Play service with streamrelay"
+msgstr ""
+
+msgid "Play service without streamrelay"
+msgstr ""
 
 #, fuzzy
 msgid "Play title"
@@ -10507,6 +10509,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select how your box will upgrade."
 msgstr ""
 
@@ -10993,9 +10998,6 @@ msgstr "منوی تنظیمات"
 #, fuzzy
 msgid "Setup mode"
 msgstr "حالت تنظیمات"
-
-msgid "Setup network time synchronization interval."
-msgstr ""
 
 msgid "Setup your positioner"
 msgstr "تنظیم مکان یاب شما"
@@ -12362,16 +12364,7 @@ msgstr ""
 msgid "Symlink to "
 msgstr ""
 
-msgid "Sync NTP every (minutes)"
-msgstr ""
-
 msgid "Sync failure moving back to origin !"
-msgstr ""
-
-msgid "Sync time using"
-msgstr ""
-
-msgid "Synchronize systemtime using transponder or internet."
 msgstr ""
 
 msgid "Syrian Arab Republic"
@@ -12538,6 +12531,9 @@ msgstr ""
 msgid "The EPG data will be stored every (hours)"
 msgstr ""
 
+msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
+msgstr ""
+
 msgid "The Image Viewer component of the File Commander requires the PicturePlayer extension. Install PicturePlayer to enable this operation."
 msgstr ""
 
@@ -12625,6 +12621,9 @@ msgstr ""
 msgid "The height of the picture. The input will be scaled to match this value."
 msgstr ""
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 #
 #, fuzzy
 msgid ""
@@ -12665,6 +12664,9 @@ msgstr ""
 
 #, python-format
 msgid "The path %s already exists."
+msgstr ""
+
+msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
 msgstr ""
 
 #, python-format
@@ -13050,6 +13052,9 @@ msgstr ""
 msgid "Time scale"
 msgstr ""
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time to execute command or script"
 msgstr ""
 
@@ -13251,6 +13256,10 @@ msgstr ""
 msgid "Transponder"
 msgstr ""
 
+#, fuzzy
+msgid "Transponder Time"
+msgstr "نمایش نوار اطلاعات دوم"
+
 msgid "Transport Stream Type"
 msgstr ""
 
@@ -13320,12 +13329,6 @@ msgid "Tuners & scanning"
 msgstr ""
 
 msgid "Tunisia"
-msgstr ""
-
-msgid ""
-"Turbo: One reboot after flash\n"
-"Fast: One reboot after flash, one reboot after restore\n"
-"Slow: One reboot after flash, one reboot after restore in GUI"
 msgstr ""
 
 msgid "Turkey"
@@ -15318,9 +15321,6 @@ msgstr ""
 msgid "fashion"
 msgstr ""
 
-msgid "fast"
-msgstr ""
-
 msgid "fileformats (BMP, PNG, JPG, GIF)"
 msgstr ""
 
@@ -15546,9 +15546,6 @@ msgid "menu"
 msgstr ""
 
 msgid "mins"
-msgstr ""
-
-msgid "minutes"
 msgstr ""
 
 #, fuzzy
@@ -15987,9 +15984,6 @@ msgstr ""
 msgid "slot%s - %s mode 12 (current image)"
 msgstr "اضافه کردن پیکربندی شبکه؟"
 
-msgid "slow"
-msgstr ""
-
 msgid "soap/melodrama/folkloric"
 msgstr ""
 
@@ -16095,9 +16089,6 @@ msgid "tourism/travel"
 msgstr ""
 
 msgid "true"
-msgstr ""
-
-msgid "turbo"
 msgstr ""
 
 #, fuzzy
